--- a/source/localisation/decisions_l_english.yml
+++ b/source/localisation/decisions_l_english.yml
@@ -183,9 +183,9 @@
  become_indian_sultanate_title:0 "スルタン国のインド化"
  become_indian_sultanate_desc:0 "インドのムスリム・スルタン国家として大きく繁栄したいならば、伝統的なムスリム王政の考えを進化させ、拡大せねばならない。我々はイスラム国家のままである一方で、ズィンミーの役割はダルマ宗教にも及ぶだろう。"
  unite_japan_subject_tooltip:1 "日本のすべての従属大名は独立します。\n我々は従属大名が所有する州にあるすべての§Y中核州§!を失います。\n日本のすべての従属大名：\n§Y大名§!政府改革が廃止されます！"
- curtail_prussian_confederation_title:0 "プロシア連合の縮小"
- curtail_prussian_confederation_desc:0 "手に負えない状況に陥らないよう、プロシア連合を終わらせねばならない。宥和政策か抑圧政策かどちらが正しい道かを決断せねばならない。"
- curtail_prussian_confederation.tooltip:0 "§Yプロシア連合が我々に対して立ち上がることはないでしょう。§!"
+ curtail_prussian_confederation_title:0 "プロイセン同盟の縮小"
+ curtail_prussian_confederation_desc:0 "手に負えない状況に陥らないよう、プロイセン同盟を終わらせねばならない。宥和政策か抑圧政策かどちらが正しい道かを決断せねばならない。"
+ curtail_prussian_confederation.tooltip:0 "§Yプロイセン同盟が我々に対して立ち上がることはないでしょう。§!"
  restore_mongol_empire_title:0 "モンゴル帝国の復興"
  restore_mongol_empire_desc:0 "チンギス・ハーンの帝国は崩壊し、多くの国家に分裂した。大ハーンの征服を再現することにより、彼の遺産を復元せねばならない。我々はモンゴル帝国を取り返すだろう！"
  mongolia_decision_tooltip:0 "§Y[Root.GetName]§!がモンゴル地方の植民地化された州を全て領有する。"
