--- a/source/localisation/dharma_l_english.yml
+++ b/source/localisation/dharma_l_english.yml
@@ -74,8 +74,8 @@
  jain_temples_built:0 "ジャイナ教寺院"
  desc_jain_temples_built:0 "この州におけるジャイナ教寺院のパトロンは、州を開発しようと私たちが努力することを支援するよう、地域のジャイナ教コミュニティを励ます。"
  tooltip_own_jain_province:0 "最低でも1つの州が§Yジャイナ教徒§!の階級に所属している。"
- jain_temples_tooltip:1 "§Y10§!年間、§Yジャイナ教徒§!が支配するランダムな州が、州の開発コスト§G-10%§!を獲得する。\nジャイナ教徒が支配する州が基本税§G1§!を獲得する。"
- jain_temples_tooltip_2:0 "§Y10§!年間、§Yジャイナ教徒§!が支配するランダムな州が、税収§G+1§!を獲得する。\nジャイナ教徒が支配する州が基本税§G1§!を獲得する。"
+ jain_temples_tooltip:1 "§Y10§!年間、§Yジャイナ教徒§!が支配する州の中からランダムで、州の開発コスト§G-10%§!を獲得する。\nジャイナ教徒が支配する州が基本税§G1§!を獲得する。"
+ jain_temples_tooltip_2:0 "§Y10§!年間、§Yジャイナ教徒§!が支配する州の中からランダムで、税収§G+1§!を獲得する。\nジャイナ教徒が支配する州が基本税§G1§!を獲得する。"
  SEEK_SUPPORT_OF_BRAHMINS:0 "バラモンの賛同を求める"
  EXEMPT_FROM_JIZYA:1 "ジズヤの免除"
  EST_VAL_BRAHMIN_LEGITIMACY:0 "正統性の希求: §Y$VAL$%§!"
@@ -973,5 +973,5 @@
  mechanic_raze_province_no:0 "略奪不可の州"
  NO_CARPET_SIEGE_MOVING:1 "§R移動中に自動包囲は管理不可§!\n"
  COT_NOT_ENOUGH_DEVELOPMENT:0 "§R$UPGRADE_NAME|Y$にアップグレードするには$NEED$の開発度が必要ですが、この州の開発度は$CURR$しかありません"
- mechanic_disables_nobility_yes:1 "§Y貴族§!階級を無効にします。"
- mechanic_disables_nobility_no:1 "§Y貴族§!階級を有効にします。"
+ mechanic_disables_estate_nobles_yes:1 "§Y貴族§!階級を無効化する。"
+ mechanic_disables_estate_nobles_no:1 "§Y貴族§!階級を有効にします。"
