--- a/source/localisation/emperor_content_l_english.yml
+++ b/source/localisation/emperor_content_l_english.yml
@@ -993,10 +993,10 @@
  dotf.10.d:0 "[From.Religion.GetName]信仰は、近年ますます支配的になり、かつて論争の余地のなかったスンナ派の神学の地位に取って代わっている。あるいは、我々は時代とともに変化し、この信仰を受け入れるべきだろうか？"
  dotf.10.a:0 "時代は変化している。我々もそれと共に変わっていかなくてはならない。"
  dotf.10.b:0 "信仰を裏切りはしない！"
- estate_burghers_prussian_confederation:0 "プロシア連合への譲歩"
- prussian_confederation_privilege_tt:0 "プロシア連合の蜂起が起こらなくなります。"
+ estate_burghers_prussian_confederation:0 "プロイセン同盟への譲歩"
+ prussian_confederation_privilege_tt:0 "プロイセン同盟の蜂起が起こらなくなります。"
  flavor_teu.5.t:0 "チュートン騎士団領の崩壊"
- flavor_teu.5.d:0 "我が国がプロシア連合に特権を付与したことで、騎士たちの支配は彼の地に殆ど及ばなくなり、彼らが支配を取り戻す望みももはや潰えた。すでに実権は事実上の独立国となったプロシア連合の諸都市の手に移っている。これを受け、[Root.Monarch.GetTitle]はもはや騎士団領の支配は不可能になったとして辞意を表明し、こうしてチュートン騎士団のプロイセン支配は崩壊した。"
+ flavor_teu.5.d:0 "我が国がプロイセン同盟に特権を付与したことで、騎士たちの支配は彼の地に殆ど及ばなくなり、彼らが支配を取り戻す望みももはや潰えた。すでに実権は事実上の独立国となったプロイセン同盟の諸都市の手に移っている。これを受け、[Root.Monarch.GetTitle]はもはや騎士団領の支配は不可能になったとして辞意を表明し、こうしてチュートン騎士団のプロイセン支配は崩壊した。"
  flavor_teu.5.a:0 "そうか。"
  italian_wars.1.t:0 "イタリア戦争"
  italian_wars.1.d:0 "イタリアは戦火に燃えている。これはイタリア人たちの慣れ親しんだ「文明的な」戦争ではない。幾多の戦争によって鍛えられた、[major_power.GetName]の軍隊との戦いだ。教会の鐘の音と武器商人たちの声は、すぐにでも大砲の咆哮に置き換わることだろう。\n\nだが、この恐るべき戦争さえもイタリア人たちにとっては金儲けの機会のようだ。傭兵隊長たちはこぞって各国の軍に加わろうとし、歴戦の戦士たちが続々と傭兵隊に加わっている。"
@@ -1105,8 +1105,8 @@
  flavor_ara7_naples_goes_free:0 "ナポリは独立し、アルフォンソ5世の息子によって統治される。"
  opinion_NAP_paid_tribute:0 "ナポリは貢納した"
  naples_in_union_with_france:0 "§Yナポリ§!は我々の下で同君下位国となります。"
- mch_khan_of_the_mongols_mercs_unlocked_tt:0 "§Yモンゴル八旗§!の傭兵へのアクセスが可能になります。"
- emp_swi_mercenaries_merc_tt:0 "§Yスイス郷土防衛隊§!の傭兵へのアクセスが可能になります。"
+ mch_khan_of_the_mongols_mercs_unlocked_tt:0 "§Yモンゴル八旗§!の傭兵へのアクセスが解禁されます。"
+ emp_swi_mercenaries_merc_tt:0 "§Yスイス郷土防衛隊§!の傭兵へのアクセスが解禁されます。"
  swiss_mountains_modifier:0 "スイス山岳兵"
  desc_swiss_mountains_modifier:0 "我々の軍隊は、アルプス山脈の高地での戦いにおける専門家である。"
  flavor_tus.EVTNAME21:0 "時は来たれり！"
@@ -2081,14 +2081,14 @@
  faith_and_the_world:0 "信仰と世界"
  mission_to_civilize_reform:0 "文明化の使命"
  mission_to_civilize_reform_desc:0 "我々の使命は、世界中の哀れな見当違いの未開人を探し出し、彼らも我々の神学に加わるよう、彼らの人生を調整する適切な方法を彼らに教えてやることだ。"
- mission_to_kill_pirates_reform:0 "外海への使命"
+ mission_to_kill_pirates_reform:0 "外洋での布教"
  mission_to_kill_pirates_reform_desc:0 "海は我々の信仰の正直な信者たちの交易船や輸送船を略奪する、異教徒と悪党で満ちている。外海の海賊の脅威を排除することを我々の聖なる使命にしなければ、巡礼者は我々の保護下にある聖地を安全に訪れることなど決してできないことは明らかだ！"
  loyal_nobility_reform:0 "神聖な貴族"
  loyal_nobility_reform_desc:0 "我々の王国には、神の血と共に生まれた人々がおり、彼らは導き、支配するために、この世界の聖なる力によって選ばれた。我が国の指導者は世襲の地位ではないが、我々は神の血と共に生まれた人々を、国内の指導的な地位へと昇格させなければならない。"
  pious_merchants_reform:0 "重商主義的十分の一税"
  pious_merchants_reform_desc:0 "唯一の真の信仰を広めることは金のかかる作業であり、商人は金持ちであるため、これらの金持ちを国内の権力ある地位に昇格させた場合、信仰にとって役立つだろう。"
  monastic_breweries_reform:0 "修道院醸造所"
- monastic_breweries_reform_desc:1 "In the Catholic faith, the consumption of alcohol for the clergy is associated with the dedication of the priests to hard labor, humility and the honor of God's nature. So, many Catholic Monasteries fill their treasuries with the profits made from brewing wine, mead, and ale, going as far as to make a name for the quality of their products."
+ monastic_breweries_reform_desc:1 "カトリック信仰では、聖職者の飲酒は重労働に対する司祭の献身や謙虚さ、神の本性の名誉と結びついている。このため、多くのカトリック修道院は、ワイン、蜂蜜酒、エール醸造から得られる利益で財を満たし、その製品の品質の高さで名を馳せるまでになった。"
  warrior_monks_reform:0 "僧兵の統合"
  warrior_monks_reform_desc:0 "東方には、祈りと武道の両方に訓練された僧侶の強力な団体がある。これらの僧侶たちが我々の領土内に寺院を建設することを許可すれば、それらは国家の不可欠な一部となり、我々の軍の規律と信念を大いに強化するだろう。"
  partial_secularisation_reform:0 "部分的世俗化"
@@ -2711,11 +2711,11 @@
  CSC_ADJ:0 "カスカディア"
  NZL:0 "ジーランディア"
  NZL_ADJ:0 "キーウィ"
- zealandia_nation_title:0 "ジーランディアを建国"
+ zealandia_nation_title:0 "ジーランディアを形成"
  zealandia_nation_desc:0 "ここ北と南の島々に、我々は自分たちのための故郷を作り上げた。多くの人が我々のことを忘れ、地図上に我々を記すことを怠っているが、我々は統一し、すべての人々が「ジーランディア」の名前を知っていることを確認するべきだ！"
- alaska_nation_title:0 "アラスカを建国"
+ alaska_nation_title:0 "アラスカを形成"
  alaska_nation_desc:0 "我々の故郷は寒くて厳しいが、我々はその地形を克服し、それを故郷と呼んでいる。数え切れないほどの帝国が開発し我々を買収しようと試みてきたが、今では我々は自立し独立しており、自分たちの名前を刻む準備ができている！"
- cascadia_nation_title:0 "カスカディアを建国する。"
+ cascadia_nation_title:0 "カスカディアを形成"
  cascadia_nation_desc:0 "コロンビア川沿いとアメリカの太平洋沿岸のすべてで、我々の植民地は統一され独立しており、植民地の支配者の符号から解放されて、我々の新しい国家の名前を決める時が来た。カスカディアとして、我々はコロンビア川の北にあるすべての土地を主張し、交易、自由、そして美の新しい国家を作り上げる！"
  NZL_ideas:0 "キーウィのアイデア"
  NZL_ideas_start:0 "キーウィの伝統"
@@ -3198,9 +3198,9 @@
  custom_nomadic_tribes_loyalty_desc:0 "我が国は常に部族と特別な関係を持ち続けてきた。我々の密接な繋がりは、彼らの継続的な忠誠を保証する。"
  custom_special_unit_forcelimit:0 "特別な軍隊"
  custom_special_unit_forcelimit_desc:0 "我が国は敵軍を破壊するために戦場で専門の軍事連隊を雇用している。"
- A_Empire_Divided:0 "分割された帝国"
- Birthplace_of_Renaissance:0 "ルネサンスの発祥地"
- Duality_of_a_Faith:0 "信仰の二元性"
+ A_Empire_Divided:0 "An Empire Divided"
+ Birthplace_of_Renaissance:0 "Birthplace of the Renaissance"
+ Duality_of_a_Faith:0 "Duality of Faith"
  opinion_holstein_bad:0 "ホルシュタインを要求した"
  opinion_holstein_good:0 "ホルシュタインを承認した"
  become_hussite_title:0 "フス派の採用"
@@ -3307,18 +3307,18 @@
  AUG_ideas:0 "アウクスブルクのアイデア"
  AUG_ideas_start:0 "アウクスブルクの伝統"
  AUG_ideas_bonus:0 "アウクスブルクの宿願"
- aug_augusta_vindelicorum:0 "Augusta Vindelicorum"
- aug_augusta_vindelicorum_desc:0 "We are an old city, founded by the Romans themselves. The city was named Augusta Vindelicorum in honor of the first, great Roman emperor Augustus, and served as capital for the province Raetia. While the Romans as we know are no more, Augsburg prevails, and with it the Roman legacy."
- aug_afra_ulrich:0 "Home of Saint Afra and Saint Ulrich"
- aug_afra_ulrich_desc:0 "Our city is home to two of great saints of the past: Saint Afra and Saint Ulrich. Afra guaranteed protection for the Christian bishop Narcissus of Girona in Augsburg during the time of their persecution during Roman reign. She was later baptized by Narcissus. However, the Romans discovered her role in the persecution and was executed by the Romans in the year 304.\nSaint Ulrich on the other hand has a lesser role in Christian faith, but was a great leader of our city. His rule lasted from 923 to 973 and assured the construction of a proper city wall, which protected Augsburg from the marauding Hungarians."
- aug_hans_holbein:0 "Birthplace of Hans Holbein the Younger"
- aug_hans_holbein_desc:0 "Hans Holbein the Younger (1497 - 1543) is the son of a painter family, printer and painter himself. While his father stayed in Augsburg and supplied the city and the areas around with his works, Hans the Younger travelled a lot during his life time. Eventually, through the help of the philosopher Erasmus, he found himself within the English court. One of his most famous works are the portraits of the very king Henry VIII."
- aug_fugger_welser:0 "The Fugger"
- aug_fugger_welser_desc:1 "Augsburg is home of the Fugger, a merchant family, which investments and trade skills influenced the great powers of Europe. Starting with the publishing of weaver products, the Fugger quickly gained power across Europe through their focus on banking, real estate trade and copper dominance."
- aug_elias_holl:0 "Elias Holl's Buildings"
- aug_elias_holl_desc:0 "Elias Holl (1573 - 1646) was a master builder, who was responsible for the construction of the famous Goldener Saal - the splendid, golden state room of the city hall. His work are inspiration for many Augsburg master builders to come."
- aug_religionsfrieden:0 "Augsburger Religionsfriede"
- aug_religionsfrieden_desc:0 "The Protestant Reformation spread like a plague in the Holy Roman Empire. Catholics and Protestants waged wars against each other and the sovereignity of the Emperor himself was threatened. Emperor Karl V von Habsburg (1500 - 1558) tried to stop the reformation through fights with heretic princes but in the end he had to admit defeat. On the 25th of September 1555, Karl signed the Augsburger Reichs- und Religionsfrieden - the imperial and religious peace treaty, which provided religious unity within the state. While it did not give the Protestants the full religious freedom nor prevent the Thirty Years' War of 1618, it at least is the pioneer of the peace treaty which will be known as the Westfälischer Friede - the Peace of Westphalia."
- aug_textile_industry:0 "Augsburg's Textile Industry"
- aug_textile_industry_desc:0 "Augsburg had always the reputation of a city of weavers and quality textiles; a reputuation partially perpetuated by the Fugger's early business strategies themselves. Due to our usage of the flow of the Lech, the textile manufactories of Augsburg manage to craft textile products of the finest quality and quantity, and supplied central with these cloths."
+ aug_augusta_vindelicorum:0 "アウグスタ・ヴィンデリコルム"
+ aug_augusta_vindelicorum_desc:0 "自国は古都で、ローマ人のその手で建造された。この都市は、偉大なる初代ローマ帝国皇帝アウグストゥスに敬意を表してアウグスタ・ヴィンデリコルムと命名され、ラエティア属州の州都となった。我々の知るローマ人はもういないが、アウクスブルクは生きており、ローマ人の遺産が残っている。"
+ aug_afra_ulrich:0 "聖アフラと聖ウルリヒの故郷"
+ aug_afra_ulrich_desc:0 "我が都市には、かつて偉大なる二人の聖人が住んでいた。聖アフラと聖ウルリヒである。アフラは、ローマの治世の時代、迫害を受けていた時に、アウクスブルクにてジローナのキリスト教司教ナルキッソスの保護を受け、その後、彼女はナルキッソスより洗礼を受けた。しかし、迫害されていたことがローマに見つかり、304年にローマによって処刑された。\n一方、聖ウルリヒは、キリスト教信仰における役割は小さいが、我が都市の偉大なる指導者だった。彼の統治は923年から973年まで続き、アウクスブルクに適切な城壁が建設され、その城壁はハンガリーの襲撃から都市を守った。"
+ aug_hans_holbein:0 "子ハンス・ホルバインの生誕地"
+ aug_hans_holbein_desc:0 "子ハンス・ホルバイン（1497-1543）は、画家の家の息子であり、彼自身も版画家であり画家であった。彼の父がアウクスブルクに留まり、街や周辺地域に作品を提供したのに対し、子ハンスは、生涯を通じて遍歴の旅をした。やがて哲学者エラスムスの助力を受け、イングランドの宮廷に身を置く。彼の最も有名な作品の一つが、まさに王ヘンリー8世の肖像画である。"
+ aug_fugger_welser:0 "フッガー家"
+ aug_fugger_welser_desc:1 "アウクスブルクは商家であるフッガー家の本拠地だ。フッガー家はその投資と交易技術により、ヨーロッパの列強国に影響力を有した。織物製品の発売から始まったフッガー家は、銀行業、不動産取引、銅の独占に注力し、瞬く間にヨーロッパ全土へ勢力を拡大した。"
+ aug_elias_holl:0 "エリアス・ホルの建築群"
+ aug_elias_holl_desc:0 "エリアス・ホル（1573-1646）は建築家であり、かの有名な市庁舎のゴルデナー・ザール－壮大な黄金の間の建築責任者である。彼の作品は、後にアウクスブルクの多くの建築家たちに触発を与えた。"
+ aug_religionsfrieden:0 "アウクスブルクの宗教和議"
+ aug_religionsfrieden_desc:0 "プロテスタントの宗教改革は神聖ローマ帝国内に疫病のごとく広まった。カトリックとプロテスタントは互いに戦争を繰り広げ、皇帝自身の主権も脅かされていった。皇帝カール5世・フォン・ハプスブルク（1500-1558）は異端の諸侯と戦うことで宗教改革を食い止めようと試みたが、最終的には、敗北を認めざるを得なかった。1555年9月25日、カールはアウクスブルクの宗教和議－帝国と宗教の平和条約に調印し、国内の宗教的統一を実現した。この条約はプロテスタントに完全な信仰の自由を与えたわけでも、1618年の三十年戦争を防いだわけでもないが、少なくともヴェストファーレン条約－ウェストファリアの講和条約として知られることになる講和条約の先駆けである。"
+ aug_textile_industry:0 "アウクスブルクの織物工業"
+ aug_textile_industry_desc:0 "アウクスブルクは職工や高品質の織物の都市として常に評判だった。その評判は、フッガー家の黎明期の事業戦略によって、部分的に残っていった。レヒ川の流れを利用することで、アウクスブルクの織物工場は質も量も最高級の織物製品を製造し、この布地を中央へと供給した。"
  emperor_privilegia_de_non_appelando_member:0 "諸侯特権の廃止"
