--- a/source/localisation/emperor_l_english.yml
+++ b/source/localisation/emperor_l_english.yml
@@ -121,7 +121,7 @@
  YEARLY_TAX_INCOME:0 "年間税収"
  MODIFIER_RELIGIOUS_CONVERSION_RESISTANCE_DRO:1 "これはあなたの国が改革の中心地からの宗教の広がりに対してどれだけ抵抗できるかを表します。これによってあなたの国の州が改革の中心地に選ばれる可能性が弱まります。"
  MODIFIER_LEGITIMATE_SUBJECT_ELECTOR:0 "正統な従属国の選帝侯"
- MODIFIER_ACCEPT_VASSALIZATION_REASONS:0 "属国化の受諾"
+ MODIFIER_ACCEPT_VASSALIZATION_REASONS:1 "属国化の受諾"
  MODIFIER_TRANSFER_TRADE_POWER_REASONS:0 "交易力転送を受諾"
  MODIFIER_LOCAL_WARSCORE_COST_MODIFIER:0 "戦勝点コスト"
  MODIFIER_MERCANTILISM_COST:0 "重商主義推進コスト"
@@ -454,8 +454,8 @@
  HAS_ESTATE_PRIVILEGE:1 "$PRIVILEGE|Y$の階級特権を与えた\n"
  FORCE_CONVERTED_BY:0 "$CONVERTED_BY|Y$に改宗を強制された"
  NOT_FORCE_CONVERTED_BY:0 "$CONVERTED_BY|Y$に改宗を強制されていない"
- CROWN_LAND_SHARE_LESS_THAN:1 "王家が所有している土地が$SHARE|Y$%未満である\n"
- CROWN_LAND_SHARE_AT_LEAST:1 "王家が所有している土地が$SHARE|Y$%以上である\n"
+ CROWN_LAND_SHARE_LESS_THAN:1 "直轄地が$SHARE|Y$%未満である\n"
+ CROWN_LAND_SHARE_AT_LEAST:1 "直轄地が$SHARE|Y$%以上である\n"
  HAS_ESTATE_LOANS:0 "階級からの借金がある"
  HAS_NO_ESTATE_LOANS:0 "階級からの借金がない"
  GRANT_PRIVILEGE:3 "$PRIVILEGE|Y$が$ESTATE|Y$に与えられ、以下があります：\n$EFFECT$\n$MODIFIERS$"
@@ -781,7 +781,7 @@
  PRIVILEGE_NO_LONGER_VALID_DESC:0 "国内状況の変化にともない、$ESTATE|Y$にはもはや$PRIVILEGE|Y$の特権はありません$EFFECTS$"
  PRIVILEGE_NO_LONGER_VALID_EFFECTS:0 "：\n$EFFECTS|Y$"
  PRIVILEGE_NO_LONGER_VALID_NO_EFFECT:0 "。これによる我が国への影響はありません。"
- UNLOCK_FIXED_GOV_RANK:0 "政府ランクを変更する機能を解除します。"
+ UNLOCK_FIXED_GOV_RANK:0 "政府ランクを変更する機能が解禁されます。"
  PRIVILEGE_PICKER_TITLE:0 "特権"
  PRIVILEGE_PICKER_SUB_TITLE:1 "$ESTATE|Y$に特権を与える"
  MANAGE_ESTATE_PRIVILEGES:1 "特権の追加"
