--- a/source/localisation/emperor_missions_l_english.yml
+++ b/source/localisation/emperor_missions_l_english.yml
@@ -2055,7 +2055,7 @@
  emp_pap_back_the_catholic_powers_league_tt:0 "§Yカトリック連盟§!の全国家は§Y10§!年間、補正§Y教皇の軍事援助§!を獲得し、各国家には以下の効果が与えられます：\n傭兵維持費：§G-25.0%§!\n傭兵コスト：§G-10.0%§!"
  fla_belgium_nostrum:0 "我らがベルギー"
  desc_fla_belgium_nostrum:0 "我々の中核地域には多くの異なる人々が暮らしているが、我々はそれでもまだ、カエサルの時代の勇敢なるベルガエ族とベルギーの共通の地理、共通の国家的起源といったことに共通点を見出すことができる。"
- fla_prosperous_burghers:0 "成功した中産階級"
+ fla_prosperous_burghers:0 "成功した市民"
  desc_fla_prosperous_burghers:0 "我々の商人はうまくやっており、彼らはそれを誰に感謝すべきかを理解している。"
  fla_european_agents_mod:0 "ヨーロッパの仲介者"
  desc_fla_european_agents_mod:0 "我々の国民たちは大陸全体に注意深く配置されて、静かに我々の商業的利益を維持し、我々の交易は繁栄を続けている。あるいは、いつの日か我々は蓄積したヨーロッパの知識を利用し、より平和的なものを作ることができるかもしれないが、それはまだ今日明日という話ではない。"
