--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -9,10 +9,10 @@
  league_events.2.b:0 "我が国はフランスの友邦だ！"
  joined_league_of_augsburg:0 "アウクスブルク同盟に参加した"
  not_league_of_augsburg:0 "アウクスブルク同盟への参加を拒否した"
- league_events.3.t:0 "$FROMCOUNTRY$がアウグスブルク同盟に参加"
+ league_events.3.t:0 "$FROMCOUNTRY$がアウクスブルク同盟に参加"
  league_events.3.d:0 "外交は成功した。我々はフランスの拡張主義を抑えることを目指している。$FROMCOUNTRY$が包囲網に加わり、我々と共にフランスを打ち破るのだ。"
  league_events.3.a:0 "良い知らせだ！"
- league_events.4.t:0 "$FROMCOUNTRY$がアウグスブルク同盟への参加を拒否"
+ league_events.4.t:0 "$FROMCOUNTRY$がアウクスブルク同盟への参加を拒否"
  league_events.4.d:0 "外交は失敗したようだ。我々はフランスを打ち破る利点について、$FROMCOUNTRY$を説得できていないのだ。"
  league_events.4.a:0 "愚か者め"
  league_events.5.t:0 "シュマルカルデン同盟"
@@ -416,7 +416,7 @@
  flavor_hun.16.d:0 "周囲を強大な隣人に囲まれているため、ハンガリー王国は多くの場合、強力な軍隊を必要としていた。過去の戦争では、貴族たちは武装した軍隊の大半に、補完のため傭兵集団を雇い入れていた。\nこれらの兵士を職業とする傭兵たちは、しばしば新しい武器や戦術を採用することが多く、一般的には徴収された人はわずかの訓練を受ける。何人かは数年にわたって我々に奉仕してきたし、平和の時には山賊行為によって生計を立てた。ガイウス・カエサルに関する著書に触発され、[Root.Monarch.GetTitle][Root.Monarch.GetName]は恒久的な傭兵部隊の考えを考慮し始めた。兵士のための恒久的な収入源を提供することは、間違いなく敵対行為を阻止し、我々に比類のない強さを与えるだろう。少なくとも我々の財政がそれを支えられるのであれば…"
  flavor_hun.16.a:0 "我々の軍隊はエリート勢力となるだろう。"
  flavor_hun.16.a.tt:2 "黒軍の傭兵団の雇用が可能になります。\n黒軍は§Y[Root.GetName]§!が平和である場合はいつでも廃止できます。\n黒軍は遅くとも絶対主義の時代には解体されます。"
- flavor_hun.16.a.cossacks.tt:1 "貴族階級は黒軍が存在する限り、§Y10§!の影響力を失います。"
+ flavor_hun.16.a.cossacks.tt:1 "黒軍が存在する限り、貴族階級は§Y10§!の影響力を失います。"
  flavor_hun.16.b:0 "金で真の忠誠心は買えない。"
  flavor_hun.17.t:0 "黒軍の維持"
  flavor_hun.17.d:0 "[Root.Monarch.GetName]の戴冠式は、ハンガリーの貴族にとって大きな希望をもたらした。彼らは、厳しい税負担を軽くし、彼らが再び王国の仕事に影響を与えることを可能にすることを、新しい[Root.Monarch.GetTitle]に期待した。黒軍の指揮官たちもまた、新しい[Root.Monarch.GetTitle]に期待している。彼らは、過去数年間で約束された金額を最終的に得ることを望んでいる。"
@@ -425,7 +425,7 @@
  flavor_hun.18.t:0 "黒軍の終焉"
  flavor_hun.18.d:0 "黒軍がかつて技術的と戦術的に持っていた強みは、技術革新の普及がより進んだことで時間の経過と共に減少した。やがて、兵士たちは引退したか、我々の通常の王室の階級に配属されている。かつてはハンガリー軍の核であった傭兵軍はもはや存在しないが、彼らの伝統と評判は何年にもわたって我々の軍に生き続けるだろう。"
  flavor_hun.18.a:0 "すべての良いものには終わりがある。"
- end_of_black_army_tooltip:0 "今、黒軍がもはや存在しないことによって貴族階級は§Y10§!の影響力を獲得します。"
+ end_of_black_army_tooltip:0 "黒軍が今や存在しないため、貴族階級は§Y10§!の影響力を獲得します。"
  flavor_hun.19.t:0 "傭兵反乱"
  flavor_hun.19.d:0 "我々が支払いを遅らせていると主張している多くの傭兵の船長たちは、軍務を放棄し、彼らの連隊を引き連れてきた。彼らは支払われる金額を確保しようとしていると主張し、[mercenary_mutiny_province.GetName]に行軍して、州を略奪し始めた。ある隊長は自身を[Root.GetLowLevelOfficialForCountry]と宣言しており、我々の名で地元の人々から不正に税金を徴収し始めている。"
  flavor_hun.19.a:0 "恩知らずどもを粉砕しろ！"
@@ -4739,22 +4739,22 @@
  flavor_mol.EVTNAME4:0 "モルダヴィアはハンガリーからの支援を求める"
  flavor_mol.EVTDESC4:0 "ポーランド王国に支援されている、モルダヴィアのロマン王子はモルダヴィアの王位への名乗りを上げることに乗り出しました。モルダヴィアの君主は、ポーランドの支配に服従することを拒否し、彼らの問題にポーランドがさらなる干渉をしないよう保護することを見返りとして、代わりにハンガリーに誓約することを選択しました。"
  flavor_mol.4.a:0 "我々は保護をお願いせねばならない。"
- flavor_teu.EVTNAME1:0 "プロシア連合の反乱"
- flavor_teu.EVTDESC1:0 "最善を尽くしたにもかかわらず、[Root.GetAdjective]の支配を弱体化させるためのプロシア連合の努力を抑えることができませんでした。連合を支持すると誓約を結んだ都市は軍隊を集め、あからさまに反乱を起こしました。思った通り、反乱軍の構成員の多くはポーランドと繋がりを持っていて、来たるべき紛争に関して、すでにポーランドの介入を要請しています。プロイセンの血の争いは、これらの都市の支配を放棄しない限り避けられないようです。"
+ flavor_teu.EVTNAME1:0 "プロイセン同盟の反乱"
+ flavor_teu.EVTDESC1:0 "最善を尽くしたにもかかわらず、[Root.GetAdjective]の支配を弱体化させるためのプロイセン同盟の努力を抑えることができませんでした。連合を支持すると誓約を結んだ都市は軍隊を集め、あからさまに反乱を起こしました。思った通り、反乱軍の構成員の多くはポーランドと繋がりを持っていて、来たるべき紛争に関して、すでにポーランドの介入を要請しています。プロイセンの血の争いは、これらの都市の支配を放棄しない限り避けられないようです。"
  flavor_teu.1.a:0 "反逆者共を最後の一人まで全て殺せ！"
  flavor_teu.1.tooltip:0 "プロシア連合はポーランドの支援を求めている"
  flavor_teu.1.b:0 "これは我々が勝利できる戦争ではない。"
- flavor_teu.EVTNAME2:0 "プロシア連合はポーランドの支援を求める"
- flavor_teu.EVTDESC2:0 "プロシア連合と呼ばれる組織は、チュートン騎士団の支配の不公平さに対して立ち上がり、ダンツィヒで軍隊を集めました。我々はその構成員に、開戦せねばならないというその信義を支援するという内密の保証を前もって与えました。その代わりに連合は、非道な騎士団が追放された後、プロイセンの土地がポーランドに支配されることに同意しました。この合意から多くの利益を得ることができますが、血の争いに備えるべきです。"
+ flavor_teu.EVTNAME2:0 "プロイセン同盟はポーランドの支援を求める"
+ flavor_teu.EVTDESC2:0 "プロイセン同盟と呼ばれる組織は、チュートン騎士団の支配の不公平さに対して立ち上がり、ダンツィヒで軍隊を集めました。我々はその構成員に、開戦せねばならないというその信義を支援するという内密の保証を前もって与えました。その代わりに連合は、非道な騎士団が追放された後、プロイセンの土地がポーランドに支配されることに同意しました。この合意から多くの利益を得ることができますが、血の争いに備えるべきです。"
  flavor_teu.2.a:0 "彼らは我々の全面的な支援を受けるだろう。いざ、戦いへ！"
  flavor_teu.2.b:0 "これは我々の仕事ではないよ。"
  flavor_teu.EVTNAME3:0 "トルンの和約"
- flavor_teu.EVTDESC3:0 "チュートン騎士団との戦争はついに終わりを迎えた。[Root.Monarch.GetName]は、プロシア連合の指導者と共に和平交渉のテーブルに座り、互いの勝利と今後の協調を祝して乾杯を行うためにグラスを掲げた。\n本条約は自信を持って速やかに署名された。プロイセンの町、聖職者、市民、騎士の権利及び特権は維持され、彼らの戦争事由が、独裁政治に対する公正な闘争として認められた。やがて、プロシア連合の都市はポーランドの王冠に完全に組み込まれるであろう。"
+ flavor_teu.EVTDESC3:0 "チュートン騎士団との戦争はついに終わりを迎えた。[Root.Monarch.GetName]は、プロイセン同盟の指導者と共に和平交渉のテーブルに座り、互いの勝利と今後の協調を祝して乾杯を行うためにグラスを掲げた。\n本条約は自信を持って速やかに署名された。プロイセンの町、聖職者、市民、騎士の権利及び特権は維持され、彼らの戦争事由が、独裁政治に対する公正な闘争として認められた。やがて、プロイセン同盟の都市はポーランドの王冠に完全に組み込まれるであろう。"
  flavor_teu.3.a:0 "我が支配は慈悲深きものとなるであろう。"
- flavor_teu.EVTNAME4:0 "プロシア連合"
- flavor_teu.EVTDESC4:0 "チュートン騎士団は、混乱や陰謀に苦しめられていることに気づいています。ポーランドにクルムを支配するよう要請したトカゲ同盟を最近追い出したにもかかわらず、新しい組織がチュートンの支配に挑もうとしています。プロシア連合と呼ばれるこの市民や騎士、貴族達の連合は、我々の目的は不公平で独裁的な支配に対しての団結であると宣言しています。この反逆が不十分ならば、彼らの仲間の間の多くでポーランドへの支持を持っていることが知られており、彼らの影響力を小さくしないと、先人のようにプロイセンの支配を要請しようとするかもしれません。困ったことに、彼らはすでに西プロイセンの市民階級の間で大きな支持を得ています。"
+ flavor_teu.EVTNAME4:0 "プロイセン同盟"
+ flavor_teu.EVTDESC4:0 "チュートン騎士団は、混乱や陰謀に苦しめられていることに気づいています。ポーランドにクルムを支配するよう要請したトカゲ同盟を最近追い出したにもかかわらず、新しい組織がチュートンの支配に挑もうとしています。プロイセン同盟と呼ばれるこの市民や騎士、貴族達の連合は、我々の目的は不公平で独裁的な支配に対しての団結であると宣言しています。この反逆が不十分ならば、彼らの仲間の間の多くでポーランドへの支持を持っていることが知られており、彼らの影響力を小さくしないと、先人のようにプロイセンの支配を要請しようとするかもしれません。困ったことに、彼らはすでに西プロイセンの市民階級の間で大きな支持を得ています。"
  flavor_teu.4.a:0 "この反逆者共を抑えねばなるまい。"
- EST_VAL_PRUSSIAN_CONFEDERATION:0 "プロシア連合: §Y$VAL$%§!"
+ EST_VAL_PRUSSIAN_CONFEDERATION:0 "プロイセン同盟: §Y$VAL$%§!"
  flavor_klm.t.1:0 "カルムイクの到着"
  flavor_klm.1.a:0 "兵役を見返りとして彼らの定住を許可せよ。"
  flavor_klm.1.b:0 "我が土地から彼らを追い出せ！"
@@ -4772,7 +4772,7 @@
  flavor_wal.EVTDESC2D:1 "[Root.Monarch.GetName]は戦場を見渡すことを一旦止め、平静ながらも落ち着かない様子で、燃える都市[TUR.Capital.GetName]をほんの一瞬見つめました。\n[Root.Monarch.GetHerHisCap]の元に集まった従者達は、来るべき判断のため、彼らの槍と腹の準備を整えています。オスマン王室への残忍な串刺し刑が始まります。"
  flavor_wal.EVTDESC2E:1 "[Root.Monarch.GetName]は戦場を見渡すことを一旦止め、平静ながらも落ち着かない様子で、燃える都市[TUR.Capital.GetName]をほんの一瞬見つめました。\n[Root.Monarch.GetHerHisCap]の元に集まった従者達は、来るべき判断のため、彼らの槍と腹の準備を整えています。オスマン王室への残忍な串刺し刑が始まります。\n[TUR.Heir.GetTitle][TUR.Heir.GetName]は恐ろしい展示物を見ることを強いられたため、顔をゆがめました。次は自分の番だという現実が分かり始めたため、その目は恐怖で満たされています。"
  flavor_wal.EVTDESC2G:1 "集まった従者達は、来るべき判断のため、彼らの槍と腹の準備を整えています。オスマン王室への残忍な串刺し刑が始まります。兵士は、殴られボロボロである[TUR.Monarch.GetTitle][TUR.Monarch.GetName]の体を、地面でうなだれている姿勢から持ち上げ、体を支え、直立させました。かつて威厳のあった[TUR.Monarch.GetTitle]は、杭が心臓に突き刺さり、背中から出てくる際に、末期のゾッとするような金切り声を上げました。"
- dnz_decision_available_tooltip:1 "§Y「プロシア連合の縮小」§!の決断が使用可能になりました。\n階級特権§Y「プロシア連合への譲歩」§!が使用可能になりました。"
+ dnz_decision_available_tooltip:1 "決断§Y「プロイセン同盟の縮小」§!が使用可能になりました。\n階級特権§Y「プロイセン同盟への譲歩」§!が使用可能になりました。"
  flavor_klm.d.1:1 "カルムイクの部族民が野営地に向かって馬を走らせるにつれ、蹄の音が雷鳴の如く平野を渡って鳴り響きます。ハーンは小さくとも丈夫な馬から優雅に降り、我々の使節を迎えるために武器を武器を差し出します。彼は、家畜を放牧し、慣習に従って生活するための新しい土地を探し求め、全部族をはるか東方から導いてきたのだと説明しています。\nハーンは、クマ川の草原に彼の部族を定着させるのに最適な場所を見つけたと信じています。クマ川の支配者として、彼は自身の国民がこの土地を独立して支配できるようにするために、戦士を[Root.GetName]に出征しています。彼が話すにつれ、彼の表情は固くなり、ハーンは厳かに前へと進み出ます。彼は会談から離れる前に警告を加えます。彼は今や部族を引き返させることはできません。彼の言葉を受け入れなければ、我々は彼と戦闘で向き合わなければなりません。"
  granada_civil_war.1.t:0 "僭称者が蜂起"
  granada_civil_war.1.desc:0 "ユースフはナスル朝ムハンマド9世の甥である。かつては誰しもに愛されたが、兵を起こし、自らアミールとなろうとしている。\n\n我らが家族間でこのような対立に至ったことは理解の範疇を超えているが、このようなふてぶてしい行動は蛮行と称されるに相応しい。ユースフは吊るされなければならない。"
@@ -5030,29 +5030,29 @@
  alhambra_working_force:0 "アルハンブラの人材"
  desc_alhambra_working_force:0 "ユダヤ人、ムスリムなどの異端者の集団は残留を許された。その結果、さもなければ追放していたであろう投資家や労働力を手に入れることができた。"
  flavor_bur.EVTOPTB10:0 "オラニオの名において、門よ開け！"
- hre_event.8.t:0 "[From.GetName]'s Offer for the Electorate"
- hre_event.8.desc:0 "The [From.Monarch.GetTitle] of [From.GetName] has come to our court with a rather generous offer. For 6000 units of Ducats, the [From.Monarch.GetTitle] wishes that the position of Electorate of the Holy Roman Empire shall be transferred from his subject to [From.Monarch.GetHerHim]. Some might argue that such role should be not purchasable, but our treasury could certainly need the gold."
- hre_event.8.a:0 "Accept the offer."
- hre_event.8.b:0 "Send [From.Monarch.GetHerHim] home."
- hre_event.9.t:0 "The [From.Monarch.GetTitle] accepts our Offer!"
- hre_event.9.desc:0 "After travelling to [From.Capital.GetName], capital of [From.GetName] and Holy Roman Empire, our [Root.Monarch.GetTitle] made an offer to [From.Monarch.GetTitle] [From.Monarch.GetName] to transfer the role of Electorate from our subject to the [Root.GetAdjective] [Root.GovernmentName].\nAfter a few moments of consideration, the [From.Monarch.GetTitle] accepted the offer!"
- hre_event.9.a:0 "Splendid!"
- hre_event.9.a.tt:1 "§Y[This.GetName]§! is no longer §YElector§! of the Holy Roman Empire."
- hre_event.10.t:0 "The [From.Monarch.GetTitle] rejects our Offer!"
- hre_event.10.desc:0 "After travelling to [From.Capital.GetName], capital of [From.GetName] and Holy Roman Empire, our [Root.Monarch.GetTitle] made an offer to [From.Monarch.GetTitle] [From.Monarch.GetName] to transfer the role of Electorate from our subject to the [Root.GetAdjective] [Root.GovernmentName].\nAfter a few moments of consideration, the [From.Monarch.GetTitle] rejected the offer."
- hre_event.10.a:0 "Curse you, [From.Monarch.GetTitle]!"
- hre_event.11.t:0 "[From.GetName]'s Request for the Electorate"
- hre_event.11.desc:0 "The [From.Monarch.GetTitle] of [From.GetName] has come to our court and wordes [From.Monarch.GetHerHis] request: the [From.GovernmentName] of [From.GetName] asks for the transfer of electorate from their subject to them. The [From.Monarch.GetTitle] also points out that our both realms have a tight relationship, and if we fulfill this request we might gain some favors from [From.GetName]."
- hre_event.11.a:0 "Accept the request."
- hre_event.11.b:0 "Send [From.Monarch.GetHerHim] home."
- hre_event.12.t:0 "The [From.Monarch.GetTitle] accepts our Request!"
- hre_event.12.desc:0 "After travelling to [From.Capital.GetName], capital of [From.GetName] and Holy Roman Empire, our [Root.Monarch.GetTitle] made a request to [From.Monarch.GetTitle] [From.Monarch.GetName] to transfer the role of Electorate from our subject to the [Root.GetAdjective] [Root.GovernmentName].\nAfter a few moments of consideration, the [From.Monarch.GetTitle] accepted the request!"
- hre_event.12.a:0 "Splendid!"
- hre_event.13.t:0 "The [From.Monarch.GetTitle] rejects our Request!"
- hre_event.13.desc:0 "After travelling to [From.Capital.GetName], capital of [From.GetName] and Holy Roman Empire, our [Root.Monarch.GetTitle] made a request to [From.Monarch.GetTitle] [From.Monarch.GetName] to transfer the role of Electorate from our subject to the [Root.GetAdjective] [Root.GovernmentName].\nAfter a few moments of consideration, the [From.Monarch.GetTitle] rejected the request!"
- hre_event.13.a:0 "Curse you, [From.Monarch.GetTitle]!"
- hre_event.14.t:0 "[From.GetName] usurped our Electorate!"
- hre_event.14.desc:0 "Our overlord, [From.GetName], managed to transfer our unique Electorate! We are no longer an elector within the Holy Roman Empire!"
- hre_event.14.a:0 "What a horrible day..."
- flavor_cri.2.a.ct:1 "§Y[TUR.GetName]§! will make §Y[CRI.GetName]§! to their Tributary State.\n§Y[CRI.GetName]§! grants independence to all its §YTributary State§! subjects."
+ hre_event.8.t:0 "[From.GetName]の選帝侯向け提案"
+ hre_event.8.desc:0 "[From.GetName][From.Monarch.GetTitle]が、寛大な申し出を持って当宮殿を訪れました。[From.Monarch.GetTitle]は、6000ダカットで神聖ローマ帝国の選帝侯の地位を臣下から自身に移譲することを願い出ております。このような役割は購入できないはずだという異議を唱える者もいるかもしれませんが、自国の財布は間違いなく金を必要としています。"
+ hre_event.8.a:0 "その申し出を受けよ。"
+ hre_event.8.b:0 "家まで送ってやれ。"
+ hre_event.9.t:0 "[From.Monarch.GetTitle]は我が提案を受諾する！"
+ hre_event.9.desc:0 "[From.GetName]及び神聖ローマ帝国の首都である[From.Capital.GetName]を訪れた後、我が[Root.Monarch.GetTitle]は[From.Monarch.GetName][From.Monarch.GetTitle]に対して、我が臣下から[Root.GetAdjective][Root.GovernmentName]へ選帝侯の位を移譲するよう申し入れました。\nしばらく検討された後、[From.Monarch.GetTitle]はその申し出を受諾しました！"
+ hre_event.9.a:0 "よろしい！"
+ hre_event.9.a.tt:1 "§Y[This.GetName]§!はもはや神聖ローマ帝国の§Y選帝侯§!ではありません。"
+ hre_event.10.t:0 "[From.Monarch.GetTitle]は我が申し出を却下する！"
+ hre_event.10.desc:0 "[From.GetName]及び神聖ローマ帝国の首都である[From.Capital.GetName]を訪れた後、我が[Root.Monarch.GetTitle]は[From.Monarch.GetName][From.Monarch.GetTitle]に対して、我が臣下から[Root.GetAdjective][Root.GovernmentName]へ選帝侯の位を移譲するよう申し入れました。\nしばらく検討された後、[From.Monarch.GetTitle]はその申し出を却下しました。"
+ hre_event.10.a:0 "呪われろ、[From.Monarch.GetTitle]！"
+ hre_event.11.t:0 "[From.GetName]の選帝侯の要請"
+ hre_event.11.desc:0 "[From.GetName][From.Monarch.GetTitle]が我が宮廷を訪れ、要求を伝えました。[From.GetName][From.GovernmentName]は彼らの臣下から彼らに選帝侯位を移譲するよう要求しています。[From.Monarch.GetTitle]は、両国が緊密な関係にあり、この要求を満たせば[From.GetName]からいくらかの好感を得られる可能性があるとも指摘しています。"
+ hre_event.11.a:0 "要請を受け入れよ。"
+ hre_event.11.b:0 "家まで送ってやれ。"
+ hre_event.12.t:0 "[From.Monarch.GetTitle]は我が要請を受け入れる！"
+ hre_event.12.desc:0 "[From.GetName]及び神聖ローマ帝国の首都である[From.Capital.GetName]を訪れた後、我が[Root.Monarch.GetTitle]は[From.Monarch.GetName][From.Monarch.GetTitle]に対して、我が臣下から[Root.GetAdjective][Root.GovernmentName]へ選帝侯の位を移譲するよう要請しました。\nしばらく検討された後、[From.Monarch.GetTitle]はその要請を受諾しました！"
+ hre_event.12.a:0 "よろしい！"
+ hre_event.13.t:0 "[From.Monarch.GetTitle]は我が要請を拒否する！"
+ hre_event.13.desc:0 "[From.GetName]及び神聖ローマ帝国の首都である[From.Capital.GetName]を訪れた後、我が[Root.Monarch.GetTitle]は[From.Monarch.GetName][From.Monarch.GetTitle]に対して、我が臣下から[Root.GetAdjective][Root.GovernmentName]へ選帝侯の位を移譲するよう要請しました。\nしばらく検討された後、[From.Monarch.GetTitle]はその要請を拒否しました！"
+ hre_event.13.a:0 "呪われろ、[From.Monarch.GetTitle]！"
+ hre_event.14.t:0 "[From.GetName]が我が選帝侯を強奪した！"
+ hre_event.14.desc:0 "我が宗主である[From.GetName]が、私たちだけのものである選帝侯の位の移譲に成功しました。私たちはもはや神聖ローマ帝国内の選帝侯ではありません！"
+ hre_event.14.a:0 "なんて日だ..."
+ flavor_cri.2.a.ct:1 "§Y[TUR.GetName]§!は、§Y[CRI.GetName]§!を自身の朝貢国にする。\n§Y[CRI.GetName]§!は、自身の§Y朝貢国§!の臣民に対して独立を認める。"
  flavor_teu.3.b:0 "プロイセン人は我が支配の下で奉仕するだろう。"
