--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -1665,7 +1665,7 @@
  china_events.1.a:0 "私は[trade_problems_province.GetName]の人々が自身を統治する最良の方法を知っていると確信している。"
  china_events.1.b:0 "我々はこれを見過ごすことはできない！"
  china_events.2.t:0 "[port_incident_location.GetName]事件"
- china_events.2.d:0 "世界各地の商人が中国の豊かな港を目指す中、時として敵視する集団に遭遇することがあるのは不思議ではない。[port_incident_location.GetName]で、同じ地域で地位を確立しようとする競合する2つの集団に関連すると思われる騒動が多発し、地元当局が困惑している。\nこの騒動が広がることを恐れ、司令部は港を閉鎖し、地域にいる外国人を追い出すことを提案している。しかし、現地の海事貿易局は、両者に罰金を科し、我々の商品の購入を継続させることを勧めている。"
+ china_events.2.d:0 "世界各地の商人が中国の豊かな港を目指す中、時として敵視する集団に遭遇することがあるのは不思議ではない。[port_incident_location.GetName]で、同じ地域で地位を確立しようとする競合する2つの集団に関連すると思われる騒動が多発し、地元当局が困惑している。\nこの騒動が広がることを恐れ、都督府は港を閉鎖し、地域にいる外国人を追い出すことを提案している。しかし、現地の市舶司は、両者に罰金を科し、我々の商品の購入を継続させることを勧めている。"
  china_events.2.a:0 "罰金を科した上で、継続を認める。"
  china_events.2.b:0 "事務所を閉鎖し、外夷を追放しろ。"
  china_events.3.t:0 "蚊帳の外の[Root.Monarch.GetName]"
@@ -1764,7 +1764,7 @@
  china_events.24.a:0 "ただ、わずかな数の追加の枠の確保は、確実な害とはならないのでは？"
  china_events.24.b:0 "官僚の質を危険にさらしてはならない！"
  china_events.25.t:0 "ならず者との外交"
- china_events.25.d:0 "海上交易機関の役人は、最近、対外外交に非常に積極的である。特に[country_of_interest.GetName]が派閥の関心を集めている。彼らは、貿易と協力の分野をさらに広げることが両国にとって有益であると信じている。[country_of_interest.GetName]が中国の権威に服従すべきだと主張する者もいる。\n外国の大使が宮廷に召喚された。我々は彼に何を伝えるべきだろうか？"
+ china_events.25.d:0 "市舶司の役人は、最近、対外外交に非常に積極的である。特に[country_of_interest.GetName]が派閥の関心を集めている。彼らは、貿易と協力の分野をさらに広げることが両国にとって有益であると信じている。[country_of_interest.GetName]が中国の権威に服従すべきだと主張する者もいる。\n外国の大使が宮廷に召喚された。我々は彼に何を伝えるべきだろうか？"
  china_events.25.a:0 "彼が問題なく旅立てるようにということ。"
  china_events.25.b:0 "防御の準備をしたほうがいいということ。"
  china_events.26.t:0 "[Root.Monarch.GetName]の寵愛"
@@ -1806,7 +1806,7 @@
  china_events.34.a:0 "[Root.Adm_Advisor.GetHerHim]には死が待っている。"
  china_events.34.b:0 "[Root.Adm_Advisor.GetHerHim]を殺すことは大いなる罪だ。"
  china_events.35.t:0 "辺境の保護"
- china_events.35.d:0 "中国の国境を守るには、常に強力な軍隊が必要である。弱体化した時、我々の手の届かない地域の野蛮人は、我々の土地を襲撃・侵略することを決してためらわない。\n我々の安全を確保するため、各司令部は我々に対し、辺境地域に遠征隊を送り、蛮族の力を探り、同時に我々の力を示すよう求めている。"
+ china_events.35.d:0 "中国の国境を守るには、常に強力な軍隊が必要である。弱体化した時、我々の手の届かない地域の野蛮人は、我々の土地を襲撃・侵略することを決してためらわない。\n我々の安全を確保するため、各都督府は我々に対し、辺境地域に遠征隊を送り、蛮族の力を探り、同時に我々の力を示すよう求めている。"
  china_events.35.a:0 "素晴らしい考えだ！"
  china_events.35.b:0 "軍の代わりに、防御を強化しなければならない。"
  china_events.36.t:0 "晋時代の小像"
