--- a/source/localisation/hnn_l_english.yml
+++ b/source/localisation/hnn_l_english.yml
@@ -17,7 +17,7 @@
  HUSSARS_DESC:1 "ユサールは強力かつ希少なユニットです。§Y白兵フェーズ§!では、圧倒的な破壊力を持つ突撃を行い、敵の士気に多大なダメージを与えます。\n\n§Yユサール§!連隊の数は、受容文化の州の開発度に基づき、100開発度につき1ユニットの割合で算出されます。"
  REGCAT_hussars:0 "有翼重騎兵"
  hussars_regiment:0 "有翼重騎兵"
- ADD_HUSSARS_SUB_UNIT_EFFECT:0 "Get '§GWinged Hussars§!' $UNIT$ in $WHERE|Y$."
+ ADD_HUSSARS_SUB_UNIT_EFFECT:0 "$WHERE|Y$にて「§G有翼重騎兵§!」$UNIT$を獲得する。"
  HUSSARS_REGIMENT:0 "ユサール連隊\n$EFFECT$"
  HAVE_LESS_HUSSARS_THAN:0 "有翼重騎兵が$VALUE|Y$より少ない。\n"
  HAVE_AT_LEAST_HUSSARS_THAN:0 "$VALUE|Y$以上の有翼重騎兵連隊を持っている。\n"
@@ -40,12 +40,12 @@
  negative_karma:0 "負のカルマ"
  BREAK_ALLIANCE_EFFECT:0 "$WHO|Y$との同盟を破棄する"
  MODIFIER_MILITARY_TACTICS:0 "軍事戦術：$VALUE|G$"
- ONLY_HUSSARS_MODIFIER:0 "§YAffects only Hussars Regiments§!"
+ ONLY_HUSSARS_MODIFIER:0 "§Y有翼重騎兵連隊にのみ影響§!"
  BANNER_LIMIT_CULTURE:0 "$PROVINCE$は$CULTURE$文化の州なので、八旗連隊を召集できません。"
  LionsOfTheNorthDLC:0 "Lions of the North"
  POLICY_NAME:0 "$POLICY|Y$"
  POLICY_GROUP_IN_COLOR:0 "（+ $POLICY|Y$ ）"
- MODIFIER_REASONS_TO_ELECT:0 "Reasons to Elect"
+ MODIFIER_REASONS_TO_ELECT:0 "選出理由"
  POLICY_GROUP:0 "（+ $POLICY$ ）"
  HUSSARS_LIMIT_CULTURE:0 "$PROVINCE$は$CULTURE$文化の州なので、有翼重騎兵連隊を召集できません。"
  MODIFIER_MANPOWER_IN_OWN_CULTURE_PROVINCES:0 "主要文化を持つ州での人的資源"
