--- a/source/localisation/modifers_l_english.yml
+++ b/source/localisation/modifers_l_english.yml
@@ -876,7 +876,7 @@
  lost_independence_war:0 "独立戦争で敗北"
  enforced_peace:0 "和平の強制"
  dan_pluralistic_government:0 "多元的な政府"
- desc_dan_pluralistic_government:0 "我々の支配者は、貴族と司教による王室評議会を廃止し、代わりに商人階級の支持を受けて支配を行っている。これは、中産階級の集団の外にいる多くの人々にとって我々の人気を落とすことになったが、我が国を多元的な方向に発展させることを容易にした。"
+ desc_dan_pluralistic_government:0 "我々の支配者は、貴族と司教による王室評議会を廃止し、代わりに商人階級の支持を受けて支配を行っている。これは、市民の集団の外にいる多くの人々にとって我々の人気を落とすことになったが、我が国を多元的な方向に発展させることを容易にした。"
  danish_dutch_burgundian_inspiration:0 "デンマークの親オランダ政策"
  growth_of_the_cattle_trade:0 "牛の交易の成長"
  desc_growth_of_the_cattle_trade:0 "我が国の豊富な牛やその他の農産物の需要が急激に増加したことで、実質的な経済的な上昇がもたらされた。大規模な土地所有者の経済的および政治的な力が成長するにつれて、小規模な農家や自由農民はますます権利を奪われている。"
@@ -2082,8 +2082,8 @@
  lit_conquered_rus:0 "ルーシの征服"
  desc_lit_conquered_rus:0 "ルーシの公爵達を従属させるのではなく、刃にかけることを選択したので、我が国家は広範囲の土地を効率的に統合し、国際問題を引き起こすことなく、必要性に順応していっている。"
  MODIFIER_MONTHLY_SUPPORT_HEIR_GAIN:0 "月間後継者支援の増加"
- pru_confederation_curtailed_modifier:0 "プロシア連合の縮小"
- desc_pru_confederation_curtailed_modifier:0 "我々の国を離れ分裂させる恐れのあるプロシア連合の影響を除去した。"
+ pru_confederation_curtailed_modifier:0 "縮小したプロイセン同盟"
+ desc_pru_confederation_curtailed_modifier:0 "我々の国を離れ分裂させる恐れのあるプロイセン同盟の影響を除去した。"
  MODIFIER_POWER_PROJECTION_FROM_INSULTS:0 "侮辱からの戦力投射"
  MODIFIER_LOCAL_RELIGIOUS_UNITY_CONTRIBUTION:0 "州の宗教統一度の貢献値"
  territory:0 "テリトリー"
@@ -2306,8 +2306,8 @@
  MODIFIER_SPECIAL_UNIT_FORCELIMIT:0 "特殊ユニット軍の扶養限界"
  desc_adu_conservative_backlash:0 "我が国を巡る再発見の波にもかかわらず、人々は彼らと一緒に立つ我々の努力に大いに感謝している。"
  desc_mesta_privileged_revoked:0 "この州のメスタの特権は取り消され、新しい開発の道が開かれている。"
- MODIFIER_ARTILLERY_LEVELS_AVAILABLE_VS_FORT:0 "Artillery Levels Available vs Fort"
- icelanding_fisher_sea:0 "Icelanding Fishing Sea"
- desc_icelanding_fisher_sea:0 "The waters off the coast of Iceland is a fruitful sea filled with cod, which is highly sought after in England and Germany. As such, Iceland attracts many foreign fishermen."
- MODIFIER_LOCAL_OWN_COAST_NAVAL_COMBAT_BONUS:0 "Naval Combat Local Bonus off owned coast"
+ MODIFIER_ARTILLERY_LEVELS_AVAILABLE_VS_FORT:0 "使用可能な砲兵レベル対要塞"
+ icelanding_fisher_sea:0 "アイスランドの漁業海域"
+ desc_icelanding_fisher_sea:0 "アイスランド沖は、イングランドやドイツで高い人気を誇るタラがたくさん獲れる豊かな海だ。そのため、アイスランドには多くの外国人漁師が集まっている。"
+ MODIFIER_LOCAL_OWN_COAST_NAVAL_COMBAT_BONUS:0 "領有沿岸沖での海軍戦闘の州ボーナス"
  MODIFIER_MAY_CONVERT_TERRITORIES:0 "テリトリーの宗教が改宗可能になる"
