--- a/source/localisation/origins_l_english.yml
+++ b/source/localisation/origins_l_english.yml
@@ -695,7 +695,7 @@
  set_prestige_to_zero_tt:0 "[This.GetName]の威信を§Y0§!に設定する。"
  enable_cult_for_heirs_tt:0 "後継者は§Yカルト§!の効果がすこし弱いバージョンを選択できる。"
  disable_cult_for_heirs_tt:0 "§R後継者はもはや§Yカルト§!の効果がすこし弱いバージョンを選択できない。§!"
- unlock_cult_through_selection_tt:0 "選択した§Yカルト§!が開放される\n他宗教からのカルトを開放するには、先にその宗教の存在を知っておく必要がある。"
+ unlock_cult_through_selection_tt:0 "選択した§Yカルト§!が解禁されます。\n他宗教からのカルトを開放するには、先にその宗教の存在を知っておく必要がある。"
  enable_development_on_buildings_built_tt:0 "防御系以外の建物を建設した場合、その州の開発度が§Y増加§!する。\nしかし、この効果が有効である間に建造物を破壊した場合は、開発度がなくなる。"
  enable_primary_cult_tt:1 "§Y主要カルト§!の使用を可能にします。これは、カルトの効果を強化し、君主死亡時に安定度を喪失しなくなりますが、他のカルトの使用はできなくなります。\n主要カルトは、§Y50§!年ごとに変更できます。"
  disable_primary_cult_tt:0 "§Y主要カルト§!の利用を無効にし、他のカルトの使用を可能にする。"
@@ -726,7 +726,7 @@
  unlock_privilege_estate_dhimmi_guarantee_of_traditions_tt:0 "[Root.GetDhimmiName]特権の「§Y保証された宗教的少数派の権利§!」及び「§Y保証されたズィンミーの自治§!」が、特権「§Y保証された因習§!」に置き換わります。"
  add_increase_opinion_of_fetishists_tt:0 "§Y呪物崇拝§!の全国家は、[Root.GetName]への外交評価が§G+40§!増加する。"
  add_increase_opinion_of_fetishists_when_same_religion_tt:0 "§Y呪物崇拝§!の全国家は、[Root.GetName]も呪物崇拝である限り、[Root.GetName]への外交評価が§G+40§!増加する。"
- add_temporary_colonist_tt:2 "The colonist is available as long as we do NOT get a colonist from an idea."
+ add_temporary_colonist_tt:2 "この植民者は、アイデアから植民者を入手しない限り、利用可能です。"
  disable_annexation_penalty_tt:0 "§Y属国併合§!による外交評判のペナルティを§Y無効§!にします。"
  enable_propogate_religion_effect_tt:1 "交易政策「§Y宗教の伝播§!」の使用を有効にします。"
  disable_propogate_religion_effect_tt:1 "交易政策「§Y宗教の伝播§!」の使用を無効にします。"
@@ -750,7 +750,7 @@
  enable_tributary_state_use_tt:0 "§Y朝貢国§!の使用を有効にします。"
  disable_tributary_state_use_tt:0 "§Y朝貢国§!の使用を無効にします。"
  unlock_privilege_estate_nobles_grant_power_to_the_bashorun_tt:0 "[Root.GetNobilityOrFallbackName]特権の「§Yバショルンへの権力付与§!」を有効にする。"
- unlock_merc_oyo_cavalry_tt:0 "傭兵団§Yオヨ騎兵隊§!の雇用が開放される。"
+ unlock_merc_oyo_cavalry_tt:0 "傭兵団§Yオヨ騎兵隊§!の雇用が解禁されます。"
  has_completed_one_adm_idea_group:0 "§Y統治§!アイデアグループを一つ完了している。"
  has_completed_one_dip_idea_group:0 "§Y外交§!アイデアグループを一つ完了している。"
  has_completed_one_mil_idea_group:0 "§Y軍事§!アイデアグループを一つ完了している。"
@@ -822,7 +822,7 @@
  judaism_remember_passover_aspect:0 "過越の記憶"
  desc_judaism_remember_passover_aspect:2 "£mil£§Yアスペクト§!\n自軍の陥落した要塞の包囲について、包囲進行度§G+2§!の有利な状態で開始される。攻城戦の進行が有利になる。敵の要塞に対し包囲戦に勝利すると、信仰力§G+5§!を獲得する。\n\n過越はユダヤ教における主要な祝日であり、自民族がエジプト人の下にあった時代－そして彼らからの解放を思い起こすものだ。全員、過去の人々が見せてきた忍耐と、すべての勝利が祝賀に値することを思い出すのだ。"
  judaism_purim_teachings_aspect:0 "プーリームの教え"
- desc_judaism_purim_teachings_aspect:2 "£mil£ §YAspect§!\nEvery won battle reduces War Exhaustion by §G-0.05§!. Every won war grants us §G+75§! Faith Power. Separate peace treaties in a war do not trigger this effect.\n\nPurim is a Jewish holiday, and serves as a memorial for the saving of our people from Haman of the Achaemenid Persian Empire. As such we remember and honor the endurance of our people during difficult times, and live by their example."
+ desc_judaism_purim_teachings_aspect:2 "£mil£§Yアスペクト§!\n戦闘に勝利する度、戦争疲弊が§G-0.05§!減少する。戦争に勝利する度、信仰力§G+10§!を獲得する。戦争中の個別講和ではこの効果は発動しない。\n\nプーリームはユダヤ教の祝日であり、アケメネス朝ペルシア帝国のハマンから自民族を救ったことを記念するものである。そのため、困難な時代における自民族の忍耐力を思い出し、称え、彼らを守る模範に生きていく。"
  diplomatic_rabbi_opinion:0 "アブラハムの交流"
  increased_fetishist_opinion:0 "呪物崇拝の交流"
  increased_same_religion:0 "信仰の同胞"
@@ -910,7 +910,7 @@
  neutral:0 "中立"
  concilatory:1 "調停的"
  concessions:0 "譲歩"
- zim_african_great_power:1 "Great Power of Africa §Y(Permanent)§!"
+ zim_african_great_power:1 "アフリカの列強§Y（恒久）§!"
  eth_cawa_discipline_title:0 "チェワの教練"
  eth_cawa_discipline_desc:1 "チェワとは、我が王国の封建的な貴族階級のことだ。元々は、かつてネグサ・ナガスト自身が任命した職業軍人なのだが、その兵が自軍の支柱として仕え、末端の地方の平和を守っている。\nまだまだ常に改善の余地はある。もっと多くの勇猛なる戦死を募り、完璧に鍛えるべきだろう。"
  eth_reform_the_negusa_government_title:0 "国家の集権化"
@@ -955,7 +955,7 @@
  eth_the_riches_of_the_south_desc:0 "外国に主権を奪われた際、当然、国民はかなり動揺を受ける。結局の所、これが戦争と征服がもたらすものであり、通常、征服された者たちは時間の経過とともに新しき宗主に順応していく。しかし、移行がより快適に行われる場合もある。カッファもその一つだ。カッファの黄金は自国にとって貴重なものだが、現地住民が動転している限り、ここで黄金を掘ることができない。カッファとダモトのインフラを改善し、善意を見せるべきだろう。"
  eth_gain_sea_access_title:0 "紅海へ至る道"
  eth_gain_sea_access_desc:0 "アクスム帝国の崩壊以来、我が王国は世界の他のキリスト教徒たちとつながる海への接近手段がなかった。港を征服し、相応の造船所をもって拡大することで、これを変えねばならない！何しろ部隊も外交官も水に触れれば船に変わるわけではないのだから。"
- eth_gain_sea_access_tt:0 "領有している港の中からランダムで一つだけ、直ちに§Y造船所§!が建てられます。"
+ eth_gain_sea_access_tt:0 "領有港の中からランダムで一つだけ、直ちに§Y造船所§!が建てられます。"
  eth_create_a_navy_title:0 "[Root.GetAdjective]海軍の創設"
  eth_create_a_navy_desc:0 "我が王国に艦船建造手段がある今、まさに艦船建造を行うことはさも当然のことだ。キリスト教徒の兄弟姉妹との永続的関係確保のため、実用的なな艦隊の保有が重要である。"
  eth_create_a_navy_tt:1 "小艦隊がナイル川を航行して地中海へと到達する。"
@@ -1212,7 +1212,7 @@
  kon_face_off_against_europeans_title:0 "奴隷商人を倒せ"
  kon_face_off_against_europeans_desc:1 "ヨーロッパから来た奴隷商人は、奴隷を求めてますます凶暴化してきている。彼らはもはや下層階級とマニとを区別せず、植民地の大農場用に必要な人は誰であろうが連行している。公的に彼らを追放しても効果は微々たるもので、自国の村を襲い、そこで住民を誘拐しているとさえ報告が上がってきている。\nこれ以上この状況を放置できない！こんな大胆不敵な行動を止めさせたければ、このヨーロッパ人どもに立ち向かい、戦闘で打ち倒さねばならない！"
  kon_face_off_against_europeans_bt:0 "ミッション「§Yヨーロッパ人を探せ§!」を先に完了すると、条件が公開される。"
- kon_face_off_against_europeans_ct:1 "§Y[Root.GetName]§!は、§Yヨーロッパ§!の国家が所有している、§Y北アフリカ§!亜大陸及び§Y南アフリカ§!亜大陸の州すべてに恒久的な請求権を獲得する。"
+ kon_face_off_against_europeans_ct:1 "§Y[Root.GetName]§!は、§Yヨーロッパ§!の国家が所有している、§Y北アフリカ§!亜大陸及び§Y南アフリカ§!亜大陸の州すべてに恒久的な請求権を獲得します。"
  kon_banish_the_westerners_from_africa_title:0 "ヨーロッパ人の追放"
  kon_banish_the_westerners_from_africa_desc:2 "南アフリカのどこかでヨーロッパ人が何らかの形で影響力を持っている限り、決して安全ではない。この脅威を自国の拠点地方から追い出し、彼らを寒い北へと追い返さねばならない！"
  kon_banish_the_westerners_from_africa_tt:0 "§Y南アフリカ§!亜大陸および§Yニジェール§!地方、§Yギニア§!地方の州をすべて、§Yヨーロッパ§!大陸に首都がある国が領有していない、ただし、ヨーロッパでも§Y[Root.GetName]§!の従属国は除く。"
@@ -1246,7 +1246,7 @@
  zim_conquer_coast_desc:0 "港湾都市ソファラは、何世紀にもわたって自国の交易品をアジアへと流通させてきた主要な貿易拠点だ。アジアとの交流を再構築したければ、この重要都市の征服が必要だ。"
  zim_build_navy_title:0 "交易船団の構築"
  zim_build_navy_desc:1 "ジンバブエ帝国では、かつて極東アジアと盛んに交易した間柄であった。しかし、商人たちは自国へとやって来なければならなかったため、それは非常に表面的な交易関係であった。\nしかし、これはもはや有効な交易戦略ではない。ソファラが、交易は波を支配する者達だけを繁栄させる、ということを見せつけた。だからこそ、この新しい状環境に適応し、独自の交易船団を構築せねばならない。"
- zim_build_navy_tt:0 "§Y[Root.GetName]§!は、§Yアフリカの角§!地方の沿岸州すべてに恒久的な請求権を獲得する。"
+ zim_build_navy_tt:0 "§Y[Root.GetName]§!は、§Yアフリカの角§!地方の沿岸州すべてに恒久的な請求権を獲得します。"
  zim_dominate_upstream_trade_title:0 "アデンの富"
  zim_dominate_upstream_trade_desc:1 "極東アジアとの交易の歴史はあったが、この昔の交易関係を復活できる可能性はまずない。けれども、恐れる理由などない。東アジア交易の富は、インドを経由し、ホルムズ湾やアデン湾に到達する。ホルムズは非常に遠いかもしれないが、アデン湾であれば手が届くだろう。自国がすべきことは…アフリカの角沿岸部の解放である。"
  zim_dominate_upstream_trade_at:0 "§Yアフリカの角§!地方にある§Y沿岸§!州である。"
@@ -1359,7 +1359,7 @@
  zan_conquer_mogadishu_desc:0 "モガディシュの連中は、我が交易に関する野望において、いつの時代も邪魔な奴らだ。奴らを征服して、これを最期と存在を消さねばならない。"
  zan_dominate_gulf_of_aden_title:0 "アデン湾"
  zan_dominate_gulf_of_aden_desc:0 "アデン湾はいつの時代も交易で活気ある地域だ。この地域を明確に管理し、自国の利益のために利用せねばならない。"
- zan_dominate_gulf_of_aden_ct:0 "§Y[Root.GetName]§!は、§Yグジャラート§!交易ノード及び§Yコロマンデル§!交易ノードの沿岸交易中心地全てに対して請求権を獲得する。"
+ zan_dominate_gulf_of_aden_ct:0 "§Y[Root.GetName]§!は、§Yグジャラート§!交易ノード及び§Yコロマンデル§!交易ノードの沿岸交易中心地全てに対して請求権を獲得します。"
  zan_centralize_trade_title:0 "交易覇権の請求"
  zan_centralize_trade_desc:0 "国内及び西方の沿岸全域を流れる交易は、制御できれば富の大源泉になる。この交易を完全に支配し、同時に、最大限の利益を得たいなら、その全周囲の交易を全て自国方面に向かうようにすべきだ。"
  zan_transport_fleet_title:0 "侵略準備"
@@ -1397,9 +1397,9 @@
  zan_establish_contact_with_persia_at:0 "§Y[2218.GetName]§!州上に任意の種類のユニットが§Y1§!連隊以上駐屯している。"
  zan_establish_contact_with_persia_bt:1 "§Y[2218.GetName]§!の所有者が、§Y[Root.GetName]§!の同盟国もしくは従属国のいずれかである。"
  zan_build_manufactories_ct:0 "§Y工場§!が建造されている領有州の内、最大§Y6§!州が§G2§!の生産を獲得する。"
- zan_explore_the_malacca_trade_tt:0 "§Y[Root.GetName]§!は、§Yスマトラ§!島及び§Yジャワ§!島に恒久的な請求権を獲得する。"
+ zan_explore_the_malacca_trade_tt:0 "§Y[Root.GetName]§!は、§Yスマトラ§!島及び§Yジャワ§!島に恒久的な請求権を獲得します。"
  zan_conquer_madagascar_tt:0 "[Root.GetName]またはその従属国が領有する§Yマダガスカル§!の州はすべて、§Y25年間§!、州補正「§Yスワヒリの占領§!」を獲得し、以下のイベントを得ます：\n州の布教強度：§G+2.0%§!\n州の交易品生産：§G+0.25§!"
- zan_colonize_the_cape_ct:0 "§Y[Root.GetName]§!は、§Yコンゴ§!地方および§Y中央アフリカ§!地方の§Y交易中心地§!がある州すべてに恒久的な請求権を獲得する。"
+ zan_colonize_the_cape_ct:0 "§Y[Root.GetName]§!は、§Yコンゴ§!地方および§Y中央アフリカ§!地方の§Y交易中心地§!がある州すべてに恒久的な請求権を獲得します。"
  zan_settle_trade_posts_ct:0 "交易収入§G4年分§!を獲得する。"
  ZAN_DOMINATION:0 "キルワ商人の支配"
  eth_legacy_of_alexandria:0 "アレクサンドリアの遺産"
@@ -1869,10 +1869,10 @@
  east_africa_lion_king_desc:0 "この地域を支配してこそ、交易商の王を名乗ることができる。征服も外交も関係ない。周りの国はすべて屈するか滅びるかだ。"
  east_africa_horn_trade_title:0 "アフリカの角からの交易"
  east_africa_horn_trade_desc:0 "バブ・エル・マンデブ海峡は交易の要衝であり、交易大国になりたいと望むのであれば、自国で支配する必要がある。死に物狂いで征服する必要はなく、適切な州を確保していくだけだ。"
- east_africa_horn_trade_tooltip:0 "アデン交易ノード地方の複数の港に請求権を獲得する。"
+ east_africa_horn_trade_tooltip:0 "アデン交易ノード地方の複数の港に請求権を獲得します。"
  east_africa_eastern_trade_title:0 "東方の交易路"
  east_africa_eastern_trade_desc:0 "中国の香辛料や東洋の香辛料は、すべて南インドを経由だ。この地域の港をいくつか押さえれば、その貴重な商品をより簡単に自国の交易首都拠点へと迂回できるだろう。"
- east_africa_eastern_trade_tooltip:0 "コロマンデル交易ノード地方の複数の港に請求権を獲得する。"
+ east_africa_eastern_trade_tooltip:0 "コロマンデル交易ノード地方の複数の港に請求権を獲得します。"
  east_africa_modern_army_title:0 "近代軍"
  east_africa_modern_army_desc:0 "陸軍と海軍が最高水準を満たしていなければ、大国と呼ぶことはできない。部隊と船舶を近代化し、どこからも恐れられるようにするのだ。"
  east_africa_modern_nation_title:0 "国家の情報発信者"
@@ -2075,7 +2075,7 @@
  hau_prepare_the_jihad_tt:0 "§Y[Root.GetName]§!は、§Yサヘル§!地方、§Yニジェール§!地方、§Yギニア§!地方にある§Yムスリム§!を信仰していない州すべてに恒久的な請求権を獲得する。"
  JOL_TRADE_DEAL_AGREEMENT:0 "ジョロフの交易協定"
  JOL_INCREASED_IVORY_DEMAND:0 "象牙の需要増"
- jol_gain_ports_tt:0 "港のある領有州からランダムで、§Y6隻の小型船§!および§Y大造船所§!をコスト無し、建造期間§Y50%§!で建造が開始される。"
+ jol_gain_ports_tt:0 "領有港の中からランダムで、§Y6隻の小型船§!および§Y大造船所§!をコスト無し、建造期間§Y50%§!で建造が開始される。"
  four_years_of_trade_income:0 "交易収入§G4年分§!を獲得する。"
  jol_centralize_the_state_ct:0 "自治率が§Y5§!以上ある領有州すべてで、自治率を§G100%§!減少させ、州の絶対主義を§G0.1§!増やします。"
  msi_integrate_the_muslims_ct:0 "§Y西アフリカ§!の既知の§Yムスリム§!国家全てに外交評価を§G50§!改善する。"
@@ -2451,6 +2451,6 @@
  custom_amount_of_cawa_desc:0 "チェワは我が軍の主力部隊である。しかし、その訓練ゆえに、彼らは極少数である。精鋭兵訓練所の設立により、これまで以上に多くのチェワ連隊が編成できるようになる。"
  custom_global_rebel_suppression_efficiency:0 "憲兵"
  custom_global_rebel_suppression_efficiency_desc:0 "反乱軍は常に我が国への脅威であり、地方の法執行機関では対処しきれない。この場合、州の平和を確保するために、軍を使わざるを得ない。"
- decline_of_mali_desc:0 "Pain. Suffering. And the Mali way of life."
- w_african_tolerance_fetishist:0 "Unity in Religion"
- desc_w_african_tolerance_fetishist:0 "We have asserted the true faith in West Africa! The traditions and authority of our shamans shall be unquestioned!"
+ decline_of_mali_desc:0 "痛み。苦しみ。そしてマリの生き方。"
+ w_african_tolerance_fetishist:0 "宗教の統一"
+ desc_w_african_tolerance_fetishist:0 "西アフリカで真の信仰を確立した！伝統と呪術師の威光は疑う余地などないのだ！"
