--- a/source/localisation/rus_awaken_l_english.yml
+++ b/source/localisation/rus_awaken_l_english.yml
@@ -1,4 +1,4 @@
 ﻿l_english:
- ruamp_a_russian_heart:0 "ロシアンハート"
- ruamp_following_the_volga:0 "ヴォルガに沿って"
- ruamp_iwans_dream:0 "イワンの夢"
+ ruamp_a_russian_heart:0 "A Russian Heart"
+ ruamp_following_the_volga:0 "Following the Volga"
+ ruamp_iwans_dream:0 "Ivan's Dream"
