--- a/source/localisation/cossacks_l_english.yml
+++ b/source/localisation/cossacks_l_english.yml
@@ -152,7 +152,7 @@
  JOIN_OFFENSIVE_WARS:0 "攻撃戦争に参加"
  GRANT_GENERALSHIP:0 "将軍位を付与"
  GRANT_ADMIRALSHIP:0 "提督位を付与"
- GRANT_GENERALSHIP_INFLUENCE:0 "§YNobility§!の権力が10年間§Y20§!上昇します。\n"
+ GRANT_GENERALSHIP_INFLUENCE:0 "§Y貴族§!階級は10年間、§Y20§!の影響力を獲得します。\n"
  INTERACTION_COOLDOWN_TOOLTIP:0 "§R$INTERACTION|Y$は$NUM|Y$年に一度だけ使用できます。$DATE|Y$に再び使用できるようになります。§!"
  INTERACTION_ASK_FOR_CONTRIBUTION_TOOLTIP:0 "この階級から寄付を求めることができるのは§Y2§!年に1回だけです。"
  MANAGE_ATTITUDE_DESC:0 "外交姿勢の管理を有効にすると§Y$COUNTRY$§!に対するあなたの国の態度を決定することができます。外交姿勢の管理が有効でない場合は、あなたの外交態度が自動的に設定されます。"
