--- a/source/localisation/fredmansepistles_l_english.yml
+++ b/source/localisation/fredmansepistles_l_english.yml
@@ -1,16 +1,16 @@
 ﻿l_english:
- Aldrig_en_iris_i_dessa_bleka_falt:0 "この荒れ果てた土地には決して一つもアイリスはなかった。"
- Drick_ur_ditt_glas_se_Doden_pa_dig_vantar:0 "グラスの酒を飲み、あなたを待っている死神を見る"
- Glimmande_Nymph_Blixtrande_oga:0 "キラリと光るニンフ　きらめく目"
- Grat_Fader_Berg_och_spela:0 "泣く父ベルク、そして演奏する"
- Karaste_Broder_Systrar_och_Vanner:0 "親愛なる兄弟、姉妹、友人"
- Kare_broder_sa_latom_oss_supa_i_frid:0 "親愛なる友人、我々と楽しく酒を飲もう"
- Mar_hur_var_skugga_mar_Movitz_Mon_Frere:0 "我が影を見よ、見よ我が兄弟モヴィッツ"
- Movitz_tag_dina_pinnar:0 "モヴィッツは箸を握る"
- Se_hvar_Movitz_sitter_dar:0 "親愛なるモヴィッツはそこに座る"
- Se_Movitz_hvi_star_du_och_grater:0 "親愛なるモヴィッツよ、何故泣いているのですか"
- Solen_glimmar_blank_och_trind:0 "太陽は明るく輝き回る"
- Trad_fram_du_nattens_gud:0 "顕現せよ、汝の夜の神よ"
- Varm_mer_ol_och_brod:0 "さらに多くのエールとパンを温めよ"
- Hvila_vid_denna_kalla:0 "この泉で休息しよう"
- Gubbarna_satt_sig_att_dricka:0 "老人は座って酒を飲む"
+ Aldrig_en_iris_i_dessa_bleka_falt:0 "Aldrig en iris på dessa bleka fält"
+ Drick_ur_ditt_glas_se_Doden_pa_dig_vantar:0 "Drick ur ditt glas, se Döden på dig väntar"
+ Glimmande_Nymph_Blixtrande_oga:0 "Glimmande Nymph Blixtrande öga"
+ Grat_Fader_Berg_och_spela:0 "Gråt Fader Berg och spela"
+ Karaste_Broder_Systrar_och_Vanner:0 "Käraste Bröder Systrar och Vänner"
+ Kare_broder_sa_latom_oss_supa_i_frid:0 "Käre broder så låtom oss supa i frid"
+ Mar_hur_var_skugga_mar_Movitz_Mon_Frere:0 "Märk hur vår skugga märk Movitz Mon Frere"
+ Movitz_tag_dina_pinnar:0 "Movitz tag dina pinnar"
+ Se_hvar_Movitz_sitter_dar:0 "Se hvar Movitz sitter där"
+ Se_Movitz_hvi_star_du_och_grater:0 "Se Movitz hvi står du och gråter"
+ Solen_glimmar_blank_och_trind:0 "Solen glimmar blank och trind"
+ Trad_fram_du_nattens_gud:0 "Träd fram du nattens gud"
+ Varm_mer_ol_och_brod:0 "Varm mer öl och bröd"
+ Hvila_vid_denna_kalla:0 "Hvila vid denna källa"
+ Gubbarna_satt_sig_att_dricka:0 "Gubbarna satt sig att dricka"
