--- a/source/localisation/leviathan_l_english.yml
+++ b/source/localisation/leviathan_l_english.yml
@@ -1282,10 +1282,10 @@
  coup_in_palace_events.4.d:0 "もしこの陰謀が私たちに教えてくれたことがあったとしたら、それは物事を当たり前だと決して思ってはいけないということです。夜が最も闇に包まれ、すべてが失われたと思われたとき、私たちの諜報員が、本当に土壇場で、陰謀者たちを「現行犯」で捕まえることに成功しました。そのとき、愚かな彼らが勝利を確信し、王位の交代を祝杯する最中のことでした。彼らの二日酔いは、涙と赦免の嘆願によって悪化することでしょう。"
  coup_in_palace_events.4.a:0 "我が国は安泰だ！"
  coup_in_palace_events.5.t:0 "陰謀の成功"
- coup_in_palace_events.5.d:0 "The enemy is within! Everything is lost! Our agents were close to catching the plotters, but they have managed to avoid our scrutiny and move on with the perfidious plans. We have to get our people to safety or they will be killed if they are perceived as a threat to the new power behind the throne.. We have to move quickly!"
+ coup_in_palace_events.5.d:0 "敵は内にあり、すべてが台無しだ！我々の諜報員たちはもう少しで陰謀者たちを捕えるところでしたが、彼らは我々の目を逃れて不実な計画を進めています。我々は人々に安全を齎さなければなりませんし、さもなくば玉座に座る新たな権力者にとって不都合であるならば人々は殺されてしまうでしょう。早く行動しなければ！"
  coup_in_palace_events.5.a:0 "ああ、希望が潰えた。玉座と我らの信仰とが。"
  coup_in_palace_events.6.t:0 "余波"
- coup_in_palace_events.6.d:1 "The plot has been brought to light and recent events have dictated its outcome. For better or worse, our country will now move forward in a new light regardless of the outcome. Such is the nature of politics and backroom dealing..."
+ coup_in_palace_events.6.d:1 "陰謀は明るみになり、直近の出来事がその結果を決定づけました。良くも悪くも、結果に関わらず、自国はこれから新しい光を放ちながら前進していくことでしょう。政治と裏取引とは、そういうものですから..."
  coup_in_palace_events.6.a:0 "どうしようか？"
  forbidden_city:0 "紫禁城"
  angkor_wat:0 "アンコール・ワット"
@@ -1327,7 +1327,7 @@
  heddal_stave_church:0 "ヘッダール・スターヴ教会"
  great_project_monument:0 "記念碑"
  extended_regency_events.1.t:0 "悪く思うな"
- extended_regency_events.1.d:1 "[Root.Heir.GetName]'s good education and natural charm have made [Root.Heir.GetHerHim] a more than appropriate option to the throne. [Root.Monarch.GetName]'s poor administration, however, has made [Root.GetName] resent its lack of stability. Governing a nation is as difficult and delicate as collecting roses without touching a single thorn. Sometimes one is just not born with the skill. Maybe we could use one of those thorns..."
+ extended_regency_events.1.d:1 "[Root.Heir.GetName]の優れた知識と天性の魅力により、後継者へ選択するにふさわしい人物になっています。しかし、[Root.Monarch.GetName]の稚拙な管理能力によって、[Root.GetName]は安定性に欠けており、苛立たせている状況です。一国の政治は、薔薇の花を一本の棘にも触れずに集めるようなほど難しく繊細なものなのです。時には、生まれもってその棘がないこともあるようですが。棘の一本くらいあればよかったのでしょうが…"
  extended_regency_events.1.a:0 "[Root.GetName]の安定確保をせねば。何としてもだ。"
  extended_regency_events.2.t:0 "影であろうが"
  extended_regency_events.2.d:0 "自身の高潔な肉体を害そうという襲撃から切り抜けた後、[Root.Monarch.GetName]は、自分が用心と呼んでいたことが、他の人はそれを不愉快な言葉で使って呼んでいるのでは、と感じ始めました。摂政は、社交の場を避けるようになり、残りの評議員に国全体の統治を任せるようになりました。\n摂政の責任感の欠如は目に余るもので、宮廷内で強い疑念を抱かせたのですが\nしかし、[Root.Monarch.GetName]に対する世論を大きく悪化させたのは、昨今見せる摂政の奇妙な振る舞いです。真夜中に目を真っ赤にして大きく見開き、暗闇の中で、自分は決して王位を手離しなどしない、とつぶやき、例え影であっても夢であっても、私の元に来てくれないか、と誰かに頼んでいます。"
@@ -1833,10 +1833,10 @@
  hagia_sophia_tt:0 "§Y[Root.GetName]§!の宗教が§Yカトリック§!、§Y正教会§!、§Yコプト正教会§!または§Yムスリム§!グループの一派であり、その宗教が国教または融合した信仰である。"
  mount_fuji_tt:0 "§Y[Root.GetName]§!の宗教が§Y神道§!または§Y大乗仏教§!であり、その宗教が国教、融合した信仰または調和した宗教のいずれかである。"
  aboriginal_tech_desc:0 "アボリジニ技術グループでは、技術レベルが250%高め（350%）です。"
- coup_in_palace_events.3.b:0 "Purge them. Purge them all."
- recent_coup_modifier:0 "Had a recent Coup Attempt"
- estate_regent_prevails_tt:0 "[Root.Monarch.GetName] is successful at pressing [Root.Monarch.GetHerHis] claim on our throne"
- plot_has_succeeded_or_failed:0 "Has resolved the §YCoup§! Events"
- plot_failed_tooltip:0 "The Plot has failed"
- plot_succeeded_tooltip:0 "The Plot has succeeded"
- coup_in_palace_events.6.b:0 "The crown is victorious!"
+ coup_in_palace_events.3.b:0 "粛清だ。全員粛清しろ。"
+ recent_coup_modifier:0 "直近のクーデターの企て"
+ estate_regent_prevails_tt:0 "[Root.Monarch.GetName]は、自国の後継者に自身を請求者として押すことに成功した。"
+ plot_has_succeeded_or_failed:0 "§Yクーデター§!イベントを解決した"
+ plot_failed_tooltip:0 "陰謀の失敗"
+ plot_succeeded_tooltip:0 "プロットの成功"
+ coup_in_palace_events.6.b:0 "君主の勝利！"
