--- a/source/localisation/rule_britannia_l_english.yml
+++ b/source/localisation/rule_britannia_l_english.yml
@@ -424,9 +424,9 @@
  anglican_rebels_demand:0 "$COUNTRYNAME$の改宗"
  anglican_rebels_demand_desc:0 "宗教的な反乱軍は$RELIGION$の信仰のために戦っている。彼らは、我々がその主権を認めるか、または最低でも、我々が改宗を試みるのを止め、平和に礼拝できる生活を送れるようになることを求めている。"
  divorce_consort_tooltip:3 "配偶者と離婚します。王室間の婚姻は終了しません。配偶者から君主力を得ます。"
- Alba:0 "アルバ"
- A_Battle_in_the_Highlands:0 "ハイランドの戦い"
- Piper_Lead_Your_Clansmen:0 "一族を率いる笛吹き"
+ Alba:0 "Alba"
+ A_Battle_in_the_Highlands:0 "A Battle in the Highlands"
+ Piper_Lead_Your_Clansmen:0 "Piper, Lead Your Clansmen"
  NOT_ENOUGH_CONSORTS:0 "$VAL$未満の配偶者"
  ENOUGH_CONSORTS:0 "$VAL$の配偶者"
  FOREIGN_PROVINCES_HRE_NOT:0 "帝国内において、非加盟国あるいは非加盟国の従属国の支配下にある州が§Y$NUM$§!未満である。"
@@ -472,43 +472,43 @@
  INNOVATIVENESS_INCREASE_DAYS_LEFT:0 "（$VAL|+1$の§Y革新性§!を獲得、残り$DAYS|Y$日）"
  gain_consort_aspect_tt:0 "[Root.Monarch.GetName]は新たな配偶者と結婚する。新たな後継者の確率を§Y15年§!の間§G100%§!増加させる。"
  a_new_consort_heir_modifier:0 "新たな王室の配偶者"
- desc_a_new_consort_heir_modifier:0 "A new heir might emerge for our country thanks to the help of our [Root.Monarch.GetTitle]'s new consort"
- dissolve_monasteries_aspect_tt:0 "The §Y[Root.GetChurchOrFallbackName]§! loses §Y10§! influence for §Y15 years§!."
- dissolve_monasteries_aspect_ct:0 "Dissolved Monasteries: $VAL|Y$§Y%§!"
- innovativeness_aspect:0 "§YEncourage Innovativeness§!"
- desc_innovativeness_aspect:0 "The old views of the Church are a relict of times of superstition. We must encourage innovativeness amongst the clergy and our people.\n\nIncrease Innovativeness Gain by §G+50.0%§! and Reform Progress Growth by §G+15.0%§! for §Y15 years§!.\nOne random owned §YAnglican§! province which has either a §YChurch§!, a §YCathedral§! or an §YUniversity§! gains §G1§! Base Production."
- innovativeness_aspect_tt:0 "Increase Innovativeness and Reform Progress Gain.\nOne random province gains Base Production."
- anglican_innovativeness:0 "Anglican Innovativeness"
- desc_anglican_innovativeness:0 "The Anglican Church encouraged new discoveries in ideas and technology for the glory of faith and state."
- expel_heretics_aspect:0 "§YDeport Heretics§!"
- desc_expel_heretics_aspect:0 "The heretics are a danger to our religion and our culture. We should expel them from our land and send them to the New World.\n\nIf we own a colonial province then it gains §G100§! Population. Also increases Settler Chance by §G5.0%§! and Religious Unity by §G10.0%§! for §Y15 years§!.\nThere is a §Y33%§! chance that the colony adapts one of the §YHeretic§! religions."
- expel_heretics_aspect_tt:0 "A random owned colony gains §G100§! Population.\nIncrease Settler Chance and Religious Unity."
- expelling_heretics:0 "Deport Heretics"
- desc_expelling_heretics:0 "The orders of the [Root.Monarch.GetTitle] are clear: everyone who admits heresy shall either be burned or be expelled into our remote colonies."
- diplomats_of_the_reformation_aspect:0 "§YReformation Diplomacy§!"
- desc_diplomats_of_the_reformation_aspect:0 "While Anglicanism is a special branch of the Reformation, we are still brothers and sisters to the Protestant and Reformed faiths. We should establish diplomatic contact with the nations of our sibling faiths."
- diplomats_of_the_reformation_aspect_tt:0 "Increase the opinion of every §YProtestant§!, §YReformed§!, §YHussite§! and §YAnglican§! countries by §G50§!."
- anglican_reformation_diplomacy:0 "Anglican Diplomacy"
- icons_of_the_church_aspect:0 "§YMilitarize Religious Icons§!"
- desc_icons_of_the_church_aspect:0 "Religion not only plays a large role in our society but also in our military. The morale of our army can be increased if they are allowed to use the icons of the Church during their campaigns."
- icons_of_the_church_aspect_tt:0 "Increase Land Morale by §G10.0%§! and decrease Shock Damage Received by §G-10.0%§! for §Y15 years."
- anglican_militarized_church_aspect:0 "Religious Icons for the Army"
- desc_anglican_militarized_church_aspect:0 "Our armies are using religious, Anglican icons during their campaigns, increasing their morale and, some assume so, luck."
- danish_admirality:0 "Danish Admiralty"
- danish_admirality_desc:0 "Others brag about their superior ship models or their sailors who fight until their pointless death. We however know it better. No fleet, as good as their wood and men could be, can achieve victory without a good leader. We shall embrace this attitude for our navy."
+ desc_a_new_consort_heir_modifier:0 "[Root.Monarch.GetTitle]の新たな配偶者のおかげで、新しい後継者が現れるでしょう。"
+ dissolve_monasteries_aspect_tt:0 "§Y[Root.GetChurchOrFallbackName]§!は§Y15年§!間、§Y10§!の影響力を失います。"
+ dissolve_monasteries_aspect_ct:0 "解体された修道院：$VAL|Y$§Y%§!"
+ innovativeness_aspect:0 "§Y革新の奨励§!"
+ desc_innovativeness_aspect:0 "教会の古い見方は迷信の時代の遺物である。我々聖職者と民衆の間に革新を奨励せねばならない。\n\n§Y15年間§!、革新性増加を§G+50.0%§!、改革進捗率を§G+15.0%§!する。\n§Y教会§!、§Y大聖堂§!、§Y大学§!のいずれかが建造されている、宗教が§Y聖公会§!の自領の州からランダムで1州、基本の生産を§G1§!増加させる。"
+ innovativeness_aspect_tt:0 "革新性と改革進捗度獲得量が増加します。\nランダムで1州が基本生産を獲得します。"
+ anglican_innovativeness:0 "聖公会の革新性"
+ desc_anglican_innovativeness:0 "英国国教会は、信仰と国家の栄光のために、思想と技術における新発見を奨励した。"
+ expel_heretics_aspect:0 "§Y異端者の追放§!"
+ desc_expel_heretics_aspect:0 "異端者は我々の宗教と文化にとって危険である。奴らを我が地から追放し、新大陸に送るべきだ。\n\n我々が植民州を領有している場合、その植民地は§G100§!の人口を獲得します。また、§Y15年§!間、入植可能性が§G5.0％§!、宗教統一度が§G10.0％§!増加します。\n§Y33％§!の確率で、その植民地は§Y異教§!の宗教のいずれかに適応します。"
+ expel_heretics_aspect_tt:0 "ランダムで1つの領有する植民地が§G100§!の人口を獲得します。\n入植可能性と宗教統一度が増加します。"
+ expelling_heretics:0 "異端者の追放"
+ desc_expelling_heretics:0 "[Root.Monarch.GetTitle]の命は明確だ。異端を認める者は皆、火刑に処すか、遠隔地の植民地へ追放するものとする。"
+ diplomats_of_the_reformation_aspect:0 "§Y改革派外交§!"
+ desc_diplomats_of_the_reformation_aspect:0 "聖公会は宗教改革の特殊な分派であるが、プロテスタントや改革派とは兄弟姉妹であることに変わりはない。兄弟信仰の国々と外交関係を結ぶべきだ。"
+ diplomats_of_the_reformation_aspect_tt:0 "すべての§Yプロテスタント§!、§Y改革派§!、§Yフス派§!、§Y聖公会§!の国家の評価が§G50§!増加する。"
+ anglican_reformation_diplomacy:0 "聖公会外交"
+ icons_of_the_church_aspect:0 "§Y聖像の軍事化§!"
+ desc_icons_of_the_church_aspect:0 "宗教は社会で大きな役割を果たすだけでなく、軍隊でも重要な役割を果たす。もし、軍が作戦中に教会のイコンを使うことが許されるなら、士気を高めることができる。"
+ icons_of_the_church_aspect_tt:0 "§Y15§!年間、陸軍士気を§G10.0%§!増加し、被白兵ダメージを§G-10.0%§!減少する。"
+ anglican_militarized_church_aspect:0 "陸軍のための聖像"
+ desc_anglican_militarized_church_aspect:0 "自軍は宗教を、つまり聖公会の聖像を遠征中に使用し、士気を高め、幸運だと推測する人もいる。"
+ danish_admirality:0 "デンマーク海軍本部"
+ danish_admirality_desc:0 "よそ者は、優れた船形や、無意味に死ぬまで戦う船員を自慢する。しかし、我々はもっとよく分かっている。どんな艦隊も、どんなに優れた木材と兵士があろうと、優れた指導者なしには勝利を得ることはできないのだ。このような姿勢を、我が海軍のために受け入れなければならない。"
  norwegian_sailors:0 "ノルウェー人水兵"
- norwegian_sailors_desc:0 "Ever since the very foundation of our kingdom, our people lived off the ocean and the coast. Fishing, raiding, sea battles - our sailors have more experience than any other naval country - and we shall promote this expertise even further."
+ norwegian_sailors_desc:0 "我が王国の建国以来、我が国民は海や沿岸で生活してきた。漁業・略奪・海戦など、我が国の船員は他のどの海軍国よりも多くの経験を積んでおり、この専門知識をさらに広めるべきである。"
  norwegian_sailors_upgraded:0 "ノルウェー人水兵"
- norwegian_sailors_upgraded_desc:0 "Ever since the very foundation of our kingdom, our people lived off the ocean and the coast. Fishing, raiding, sea battles - our sailors have more experience than any other naval country - and we shall promote this expertise even further."
- dutch_trade_fleet:0 "Dutch Trade Fleet"
- dutch_trade_fleet_desc:0 "The nations of Europe use their navies to project their power through warfare on the sea. We on the other hand shall use our navy to reach the furthest corners of the world so we can trade with foreign cultures while our neighbors bombard eachother's coasts."
- aragonese_fleet:0 "Ordinances of the Sea"
- aragonese_fleet_desc:0 "The Mediterranean has many naval powers, yet none of them have our experiences and laws. The Ordinances of our fleet ensure that our navy is always prepared to any kind of engagement on the sea."
- venetian_arsenal_naval_doctrine:0 "Venetian Arsenal"
- venetian_arsenal_naval_doctrine_desc:0 "The naval might of a nation is not only measured in its firepower on sea, but also by its ability to construct and maintain their ships. Our arsenals are made for exactly this purpose."
- korean_panokseon:0 "Panokseon"
- korean_panokseon_desc:0 "Our naval neighbors seek the subjugation of our state and people. The Panokseon, a sturdy warship which can withstand the fire of several other ships with ease, is our answer to this threat."
- japanese_atakebune:0 "Atakebune"
- japanese_atakebune_desc:0 "What is a ship worth if it gets sunk within the first hour of a naval battle? The Atakebune, the warship design of our navy, is designed with this question in mind and is more a fortress on the sea than a sinkable ship."
- hanseatic_trade_fleet:0 "Hanseatic Doctrine"
- hanseatic_trade_fleet_desc:0 "The intention of our navy is not a combat dominance on the sea but to engage in commerce and trade. Our primary objective is the maximization of our wealth and our trade experiences on the sea."
+ norwegian_sailors_upgraded_desc:0 "我が王国の建国以来、我が国民は海や沿岸で生活してきた。漁業・略奪・海戦など、我が国の船員は他のどの海軍国よりも多くの経験を積んでおり、この専門知識をさらに広めるべきである。"
+ dutch_trade_fleet:0 "オランダ交易船団"
+ dutch_trade_fleet_desc:0 "ヨーロッパ諸国は、海での戦争を通じて力を誇示するために海軍を用いている。一方、我々は、世界の最も遠いところに到るために海軍を用い、隣国が互いの海岸を砲撃している間に、異国文化と交易することができるようにしなければならない。"
+ aragonese_fleet:0 "会場に関する布告"
+ aragonese_fleet_desc:0 "地中海には海軍大国が多いものの、我々のような経験と法律を持つ国はない。我が艦隊の規則により、我が海軍は常に海上のあらゆる種類の交戦に備えることができる。"
+ venetian_arsenal_naval_doctrine:0 "ヴェネツィア国立造船所"
+ venetian_arsenal_naval_doctrine_desc:0 "一国の海軍力は、海上での火力だけでなく、その船を建造し維持する能力によって測られる。我が国の兵器庫は、まさにこの目的のために作られている。"
+ korean_panokseon:0 "板屋船"
+ korean_panokseon_desc:0 "海に面した隣国が、我らの国と民を服属せしめようとしている。数隻の船の砲撃にも十分に耐える頑丈な軍艦「板谷船」は、脅威に対する回答となっている。"
+ japanese_atakebune:0 "安宅船"
+ japanese_atakebune_desc:0 "海戦が始まってものの一時間で沈んでしまうような船に一体どんな価値があるのだ？我々の海軍の「安宅船」はこの問題を念頭に置き、そこらの沈む船ではなくもはや海上要塞となっている。"
+ hanseatic_trade_fleet:0 "ハンザ・ドクトリン"
+ hanseatic_trade_fleet_desc:0 "我々の海軍は、海上の戦闘ではなく通商と貿易の促進のためにある。海軍の存在意義とは、富と交易の機会を最大化することにあるのだ。"
