--- a/source/localisation/songs_of_the_new_world_l_english.yml
+++ b/source/localisation/songs_of_the_new_world_l_english.yml
@@ -1,4 +1,4 @@
 ﻿l_english:
- thegrandarmada:0 "無敵艦隊"
- thehunt:0 "狩り"
- travelthenewworld:0 "新世界の旅"
+ thegrandarmada:0 "The Grand Armada"
+ thehunt:0 "The Hunt"
+ travelthenewworld:0 "Travel the New World"
