--- a/source/localisation/songsofregency_l_english.yml
+++ b/source/localisation/songsofregency_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
- A_Golden_Sun_is_Rising_Ambient:0 "黄金の太陽の日の出"
- For_Honour_and_Glory_War:0 "名誉と栄光のために"
- Our_Destiny_Ambient:0 "私たちの天命"
- I_didnt_choose_this_life_it_chose_me_Ambient:0 "私がこの人生を選んだのではない、人生が私を選んだのだ"
+ A_Golden_Sun_is_Rising_Ambient:0 "A Golden Sun is Rising"
+ For_Honour_and_Glory_War:0 "For Honor and Glory"
+ Our_Destiny_Ambient:0 "Our Destiny"
+ I_didnt_choose_this_life_it_chose_me_Ambient:0 "I didn't choose this life it chose me"
